--- a/app/src/main/res/layout/activity_online.xml
+++ b/app/src/main/res/layout/activity_online.xml
@@ -21,8 +21,8 @@
             android:id="@+id/tv_available_online_balance"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/marign20dp"
-            android:layout_marginTop="@dimen/marign40dp"
+            android:layout_marginStart="@dimen/margin20dp"
+            android:layout_marginTop="@dimen/margin40dp"
             android:fontFamily="@font/lato_bold"
             android:text="@string/available_balance"
             android:textColor="@color/black"
@@ -34,13 +34,13 @@
             android:id="@+id/tv_addmoney_amount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/marign20dp"
-            android:layout_marginTop="@dimen/marign10dp"
-            android:layout_marginEnd="@dimen/marign40dp"
+            android:layout_marginStart="@dimen/margin20dp"
+            android:layout_marginTop="@dimen/margin10dp"
+            android:layout_marginEnd="@dimen/margin40dp"
             android:fontFamily="@font/lato_bold"
             android:text="Rs 600000"
             android:textColor="@color/light_green"
-            android:textSize="@dimen/marign20sp"
+            android:textSize="@dimen/margin20sp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_available_online_balance" />
@@ -51,18 +51,18 @@
             android:id="@+id/edt_online_amount"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/marign20dp"
-            android:layout_marginTop="@dimen/marign20dp"
-            android:layout_marginEnd="@dimen/marign20dp"
+            android:layout_marginStart="@dimen/margin20dp"
+            android:layout_marginTop="@dimen/margin20dp"
+            android:layout_marginEnd="@dimen/margin20dp"
             android:layout_weight="1"
             android:background="@drawable/edittext_shadow"
             android:hint="@string/enteramount"
             android:importantForAutofill="no"
             android:inputType="number"
-            android:paddingLeft="@dimen/marign10dp"
-            android:paddingTop="@dimen/marign15dp"
-            android:paddingRight="@dimen/marign10dp"
-            android:paddingBottom="@dimen/marign15dp"
+            android:paddingLeft="@dimen/margin10dp"
+            android:paddingTop="@dimen/margin15dp"
+            android:paddingRight="@dimen/margin10dp"
+            android:paddingBottom="@dimen/margin15dp"
             android:textColorHint="@color/lightgrey"
             app:layout_constraintTop_toBottomOf="@+id/tv_addmoney_amount" />
 
@@ -71,17 +71,17 @@
             android:id="@+id/edt_online_notes"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/marign20dp"
-            android:layout_marginTop="@dimen/marign10dp"
-            android:layout_marginEnd="@dimen/marign20dp"
+            android:layout_marginStart="@dimen/margin20dp"
+            android:layout_marginTop="@dimen/margin10dp"
+            android:layout_marginEnd="@dimen/margin20dp"
             android:layout_weight="1"
             android:background="@drawable/edittext_shadow"
             android:hint="@string/notes"
             android:importantForAutofill="no"
-            android:paddingLeft="@dimen/marign10dp"
-            android:paddingTop="@dimen/marign15dp"
-            android:paddingRight="@dimen/marign10dp"
-            android:paddingBottom="@dimen/marign15dp"
+            android:paddingLeft="@dimen/margin10dp"
+            android:paddingTop="@dimen/margin15dp"
+            android:paddingRight="@dimen/margin10dp"
+            android:paddingBottom="@dimen/margin15dp"
             android:textColorHint="@color/lightgrey"
             app:layout_constraintTop_toBottomOf="@+id/edt_online_amount" />
 
@@ -94,8 +94,8 @@
             android:layout_height="wrap_content"
             android:minHeight="0dp"
 
-            android:paddingTop="@dimen/marign5dp"
-            android:paddingBottom="@dimen/marign5dp"
+            android:paddingTop="@dimen/margin5dp"
+            android:paddingBottom="@dimen/margin5dp"
             android:text="@string/tenth"
             app:layout_constraintBottom_toBottomOf="@+id/button2"
             app:layout_constraintEnd_toStartOf="@+id/button2"
@@ -107,14 +107,14 @@
         <Button
             android:background="@drawable/all_transaction_bg"
             android:minHeight="0dp"
-            android:paddingTop="@dimen/marign5dp"
-            android:paddingBottom="@dimen/marign5dp"
+            android:paddingTop="@dimen/margin5dp"
+            android:paddingBottom="@dimen/margin5dp"
             android:textColor="@color/white"
             android:id="@+id/button2"
 
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/marign30dp"
+            android:layout_marginTop="@dimen/margin30dp"
             android:text="@string/twenth"
             app:layout_constraintEnd_toStartOf="@+id/button3"
             app:layout_constraintHorizontal_bias="0.5"
@@ -124,8 +124,8 @@
         <Button
             android:background="@drawable/all_transaction_bg"
             android:minHeight="0dp"
-            android:paddingTop="@dimen/marign5dp"
-            android:paddingBottom="@dimen/marign5dp"
+            android:paddingTop="@dimen/margin5dp"
+            android:paddingBottom="@dimen/margin5dp"
             android:textColor="@color/white"
             android:id="@+id/button3"
 
@@ -143,11 +143,11 @@
             android:id="@+id/tv_money_addedtomsg"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/marign40dp"
+            android:layout_marginTop="@dimen/margin40dp"
             android:fontFamily="@font/lato_bold"
             android:text="@string/moneyaddedtowallet"
             android:textColor="@color/black"
-            android:textSize="@dimen/marign20sp"
+            android:textSize="@dimen/margin20sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -158,14 +158,14 @@
             android:id="@+id/btn_proceed"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/marign10dp"
-            android:layout_marginTop="@dimen/marign20dp"
-            android:layout_marginRight="@dimen/marign10dp"
+            android:layout_marginLeft="@dimen/margin10dp"
+            android:layout_marginTop="@dimen/margin20dp"
+            android:layout_marginRight="@dimen/margin10dp"
             android:background="@drawable/button_bg_green"
             android:fontFamily="@font/lato"
             android:text="@string/proceed"
             android:textColor="@color/white"
-            android:textSize="@dimen/marign18sp"
+            android:textSize="@dimen/margin18sp"
             app:layout_constraintTop_toBottomOf="@+id/tv_money_addedtomsg" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
