--- a/app/src/main/res/layout/activity_verify_o_t_p.xml
+++ b/app/src/main/res/layout/activity_verify_o_t_p.xml
@@ -18,7 +18,7 @@
             android:layout_width="130dp"
             android:layout_height="130dp"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="@dimen/marign30dp"
+            android:layout_marginTop="@dimen/margin30dp"
             android:contentDescription="@string/image"
             android:src="@drawable/spidpay_logo"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -31,11 +31,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginBottom="@dimen/marign10dp"
+            android:layout_marginBottom="@dimen/margin10dp"
             android:fontFamily="@font/lato_bold"
             android:text="@string/verfication"
             android:textColor="@color/purple_200"
-            android:textSize="@dimen/marign25sp"
+            android:textSize="@dimen/margin25sp"
             app:layout_constraintBottom_toTopOf="@+id/tv_opt_txt"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent" />
@@ -45,12 +45,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginTop="@dimen/marign5dp"
-            android:layout_marginBottom="@dimen/marign10dp"
+            android:layout_marginTop="@dimen/margin5dp"
+            android:layout_marginBottom="@dimen/margin10dp"
             android:fontFamily="@font/lato"
             android:text="@string/verficationtxt"
             android:textColor="@color/black"
-            android:textSize="@dimen/marign16sp"
+            android:textSize="@dimen/margin16sp"
             app:layout_constraintBottom_toTopOf="@+id/constraint_verify_otp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent" />
@@ -59,9 +59,9 @@
             android:id="@+id/constraint_verify_otp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/marign20dp"
-            android:layout_marginTop="@dimen/marign15dp"
-            android:layout_marginEnd="@dimen/marign20dp"
+            android:layout_marginStart="@dimen/margin20dp"
+            android:layout_marginTop="@dimen/margin15dp"
+            android:layout_marginEnd="@dimen/margin20dp"
             android:background="@drawable/edittext_shadow"
             android:orientation="horizontal"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -78,10 +78,10 @@
                 android:text="@={verify_otp.OTP}"
                 android:inputType="number"
                 android:maxLength="10"
-                android:paddingStart="@dimen/marign5dp"
-                android:paddingTop="@dimen/marign10dp"
-                android:paddingEnd="@dimen/marign10dp"
-                android:paddingBottom="@dimen/marign10dp"
+                android:paddingStart="@dimen/margin5dp"
+                android:paddingTop="@dimen/margin10dp"
+                android:paddingEnd="@dimen/margin10dp"
+                android:paddingBottom="@dimen/margin10dp"
                 android:singleLine="true"
                 android:textColorHint="@color/lightgrey"
                 app:layout_constraintTop_toTopOf="parent"
@@ -89,12 +89,12 @@
 
             <ImageView
                 android:id="@+id/img_cleare_login_mobilenumber"
-                android:layout_width="@dimen/marign20dp"
-                android:layout_height="@dimen/marign20dp"
+                android:layout_width="@dimen/margin20dp"
+                android:layout_height="@dimen/margin20dp"
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
                 android:layout_gravity="center"
-                android:layout_marginEnd="@dimen/marign10dp"
+                android:layout_marginEnd="@dimen/margin10dp"
                 android:src="@drawable/clear_field"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -107,14 +107,14 @@
             android:id="@+id/btn_verify_otp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/marign20dp"
-            android:layout_marginTop="@dimen/marign20dp"
-            android:layout_marginRight="@dimen/marign20dp"
+            android:layout_marginLeft="@dimen/margin20dp"
+            android:layout_marginTop="@dimen/margin20dp"
+            android:layout_marginRight="@dimen/margin20dp"
             android:background="@drawable/button_bg_blue"
             android:text="@string/txtcontinue"
             android:textAllCaps="false"
             android:textColor="@color/white"
-            android:textSize="@dimen/marign18sp"
+            android:textSize="@dimen/margin18sp"
             android:onClick="@{(v)->verify_otp.validateOTPFiled(v)}"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -125,14 +125,14 @@
             android:id="@+id/tv_resentcode"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/marign20dp"
+            android:layout_marginTop="@dimen/margin20dp"
             android:fontFamily="@font/lato"
             android:gravity="center"
-            android:paddingLeft="@dimen/marign15dp"
-            android:paddingRight="@dimen/marign15dp"
+            android:paddingLeft="@dimen/margin15dp"
+            android:paddingRight="@dimen/margin15dp"
             android:text="@string/verficationtxt2"
             android:textColor="@color/dark_blue"
-            android:textSize="@dimen/marign18sp"
+            android:textSize="@dimen/margin18sp"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/btn_verify_otp" />
@@ -145,14 +145,14 @@
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_gravity="end"
-            android:layout_marginTop="@dimen/marign20dp"
+            android:layout_marginTop="@dimen/margin20dp"
             android:fontFamily="@font/lato"
             android:gravity="center"
-            android:paddingLeft="@dimen/marign15dp"
-            android:paddingRight="@dimen/marign15dp"
+            android:paddingLeft="@dimen/margin15dp"
+            android:paddingRight="@dimen/margin15dp"
             android:text="@string/verficationtxt3"
             android:textColor="@color/dark_blue"
-            android:textSize="@dimen/marign18sp"
+            android:textSize="@dimen/margin18sp"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/btn_verify_otp" />
 
