--- a/app/src/main/res/layout/address_edit_layout.xml
+++ b/app/src/main/res/layout/address_edit_layout.xml
@@ -16,7 +16,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="@dimen/marign15dp">
+        android:padding="@dimen/margin15dp">
 
         <TextView
             android:id="@+id/tv_update_address"
@@ -25,7 +25,7 @@
             android:fontFamily="@font/lato_bold"
             android:text="@string/updateaddress"
             android:textColor="@color/black"
-            android:textSize="@dimen/marign20sp"
+            android:textSize="@dimen/margin20sp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -44,15 +44,15 @@
             android:id="@+id/edt_edit_address1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/marign20dp"
+            android:layout_marginTop="@dimen/margin20dp"
             android:layout_weight="1"
             android:background="@drawable/edittext_shadow"
             android:hint="@string/address1"
             android:inputType="text"
-            android:paddingLeft="@dimen/marign10dp"
-            android:paddingTop="@dimen/marign10dp"
-            android:paddingRight="@dimen/marign10dp"
-            android:paddingBottom="@dimen/marign10dp"
+            android:paddingLeft="@dimen/margin10dp"
+            android:paddingTop="@dimen/margin10dp"
+            android:paddingRight="@dimen/margin10dp"
+            android:paddingBottom="@dimen/margin10dp"
             android:singleLine="true"
             android:text="@={address.addressline}"
             android:textColorHint="@color/lightgrey"
@@ -66,15 +66,15 @@
             android:id="@+id/edt_edit_address2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/marign10dp"
+            android:layout_marginTop="@dimen/margin10dp"
             android:layout_weight="1"
             android:background="@drawable/edittext_shadow"
             android:hint="@string/address2"
             android:inputType="text"
-            android:paddingLeft="@dimen/marign10dp"
-            android:paddingTop="@dimen/marign10dp"
-            android:paddingRight="@dimen/marign10dp"
-            android:paddingBottom="@dimen/marign10dp"
+            android:paddingLeft="@dimen/margin10dp"
+            android:paddingTop="@dimen/margin10dp"
+            android:paddingRight="@dimen/margin10dp"
+            android:paddingBottom="@dimen/margin10dp"
             android:singleLine="true"
             android:text="@={address.landmark}"
             android:textColorHint="@color/lightgrey"
@@ -87,15 +87,15 @@
             android:id="@+id/edt_edit_address_city"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/marign10dp"
+            android:layout_marginTop="@dimen/margin10dp"
             android:layout_weight="1"
             android:background="@drawable/edittext_shadow"
             android:hint="@string/city"
             android:inputType="text"
-            android:paddingLeft="@dimen/marign10dp"
-            android:paddingTop="@dimen/marign10dp"
-            android:paddingRight="@dimen/marign10dp"
-            android:paddingBottom="@dimen/marign10dp"
+            android:paddingLeft="@dimen/margin10dp"
+            android:paddingTop="@dimen/margin10dp"
+            android:paddingRight="@dimen/margin10dp"
+            android:paddingBottom="@dimen/margin10dp"
             android:singleLine="true"
             android:text="@={address.city}"
             android:textColorHint="@color/lightgrey"
@@ -108,15 +108,15 @@
             android:id="@+id/edt_edit_address_distric"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/marign10dp"
+            android:layout_marginTop="@dimen/margin10dp"
             android:layout_weight="1"
             android:background="@drawable/edittext_shadow"
             android:hint="@string/district"
             android:inputType="text"
-            android:paddingLeft="@dimen/marign10dp"
-            android:paddingTop="@dimen/marign10dp"
-            android:paddingRight="@dimen/marign10dp"
-            android:paddingBottom="@dimen/marign10dp"
+            android:paddingLeft="@dimen/margin10dp"
+            android:paddingTop="@dimen/margin10dp"
+            android:paddingRight="@dimen/margin10dp"
+            android:paddingBottom="@dimen/margin10dp"
             android:singleLine="true"
             android:text="@={address.district}"
             android:textColorHint="@color/lightgrey"
@@ -129,15 +129,15 @@
             android:id="@+id/edt_edit_address_picode"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/marign10dp"
+            android:layout_marginTop="@dimen/margin10dp"
             android:layout_weight="1"
             android:background="@drawable/edittext_shadow"
             android:hint="@string/pincode"
             android:inputType="number"
-            android:paddingLeft="@dimen/marign10dp"
-            android:paddingTop="@dimen/marign10dp"
-            android:paddingRight="@dimen/marign10dp"
-            android:paddingBottom="@dimen/marign10dp"
+            android:paddingLeft="@dimen/margin10dp"
+            android:paddingTop="@dimen/margin10dp"
+            android:paddingRight="@dimen/margin10dp"
+            android:paddingBottom="@dimen/margin10dp"
             android:singleLine="true"
             android:text="@={address.pinCode}"
             android:textColorHint="@color/lightgrey"
@@ -151,15 +151,15 @@
             android:id="@+id/edt_edit_address_state"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/marign10dp"
+            android:layout_marginTop="@dimen/margin10dp"
             android:layout_weight="1"
             android:background="@drawable/edittext_shadow"
             android:hint="@string/state"
             android:inputType="text"
-            android:paddingLeft="@dimen/marign10dp"
-            android:paddingTop="@dimen/marign10dp"
-            android:paddingRight="@dimen/marign10dp"
-            android:paddingBottom="@dimen/marign10dp"
+            android:paddingLeft="@dimen/margin10dp"
+            android:paddingTop="@dimen/margin10dp"
+            android:paddingRight="@dimen/margin10dp"
+            android:paddingBottom="@dimen/margin10dp"
             android:singleLine="true"
             android:text="@={address.state}"
             android:textColorHint="@color/lightgrey"
@@ -173,15 +173,15 @@
             android:id="@+id/edt_edit_address_country"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/marign10dp"
+            android:layout_marginTop="@dimen/margin10dp"
             android:layout_weight="1"
             android:background="@drawable/edittext_shadow"
             android:hint="@string/country"
             android:inputType="text"
-            android:paddingLeft="@dimen/marign10dp"
-            android:paddingTop="@dimen/marign10dp"
-            android:paddingRight="@dimen/marign10dp"
-            android:paddingBottom="@dimen/marign10dp"
+            android:paddingLeft="@dimen/margin10dp"
+            android:paddingTop="@dimen/margin10dp"
+            android:paddingRight="@dimen/margin10dp"
+            android:paddingBottom="@dimen/margin10dp"
             android:singleLine="true"
             android:text="@={address.country}"
             android:textColorHint="@color/lightgrey"
@@ -193,17 +193,17 @@
             android:id="@+id/btn_update_address"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/marign10dp"
-            android:layout_marginTop="@dimen/marign20dp"
-            android:layout_marginEnd="@dimen/marign10dp"
-            android:layout_marginBottom="@dimen/marign20dp"
+            android:layout_marginStart="@dimen/margin10dp"
+            android:layout_marginTop="@dimen/margin20dp"
+            android:layout_marginEnd="@dimen/margin10dp"
+            android:layout_marginBottom="@dimen/margin20dp"
             android:background="@drawable/button_bg_green"
             android:fontFamily="@font/lato"
             android:onClick="@{(v)->myprofileviewmodel.validate_edit_Address(v,address)}"
             android:text="@string/update"
             android:textAllCaps="false"
             android:textColor="@color/white"
-            android:textSize="@dimen/marign18sp"
+            android:textSize="@dimen/margin18sp"
             app:layout_constraintTop_toBottomOf="@+id/edt_edit_address_country" />
 
 
