--- a/app/src/main/res/layout/fragment_a_e_p_s__custom__deatil_.xml
+++ b/app/src/main/res/layout/fragment_a_e_p_s__custom__deatil_.xml
@@ -11,10 +11,10 @@
         android:id="@+id/linear_aeps_customer_phone_number"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/marign20dp"
-        android:layout_marginTop="@dimen/marign30dp"
-        android:layout_marginEnd="@dimen/marign20dp"
-        android:layout_marginBottom="@dimen/marign20dp"
+        android:layout_marginStart="@dimen/margin20dp"
+        android:layout_marginTop="@dimen/margin30dp"
+        android:layout_marginEnd="@dimen/margin20dp"
+        android:layout_marginBottom="@dimen/margin20dp"
         android:background="@drawable/edittext_shadow"
         android:orientation="horizontal"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -28,18 +28,18 @@
             android:hint="@string/custphonenumber"
             android:inputType="number"
             android:maxLength="10"
-            android:paddingLeft="@dimen/marign10dp"
-            android:paddingTop="@dimen/marign10dp"
-            android:paddingRight="@dimen/marign10dp"
-            android:paddingBottom="@dimen/marign10dp"
+            android:paddingLeft="@dimen/margin10dp"
+            android:paddingTop="@dimen/margin10dp"
+            android:paddingRight="@dimen/margin10dp"
+            android:paddingBottom="@dimen/margin10dp"
             android:textColorHint="@color/lightgrey"
             android:importantForAutofill="no" />
 
         <ImageView
-            android:layout_width="@dimen/marign20dp"
-            android:layout_height="@dimen/marign20dp"
+            android:layout_width="@dimen/margin20dp"
+            android:layout_height="@dimen/margin20dp"
             android:layout_gravity="center"
-            android:layout_marginEnd="@dimen/marign10dp"
+            android:layout_marginEnd="@dimen/margin10dp"
             android:focusable="false"
             android:src="@drawable/clear_field"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -54,10 +54,10 @@
         android:id="@+id/linear_aeps_customer_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/marign20dp"
-        android:layout_marginTop="@dimen/marign10dp"
-        android:layout_marginEnd="@dimen/marign20dp"
-        android:layout_marginBottom="@dimen/marign20dp"
+        android:layout_marginStart="@dimen/margin20dp"
+        android:layout_marginTop="@dimen/margin10dp"
+        android:layout_marginEnd="@dimen/margin20dp"
+        android:layout_marginBottom="@dimen/margin20dp"
         android:background="@drawable/edittext_shadow"
         android:orientation="horizontal"
         app:layout_constraintTop_toBottomOf="@+id/linear_aeps_customer_phone_number">
@@ -70,18 +70,18 @@
             android:hint="@string/custphonename"
             android:inputType="number"
             android:maxLength="10"
-            android:paddingLeft="@dimen/marign10dp"
-            android:paddingTop="@dimen/marign10dp"
-            android:paddingRight="@dimen/marign10dp"
-            android:paddingBottom="@dimen/marign10dp"
+            android:paddingLeft="@dimen/margin10dp"
+            android:paddingTop="@dimen/margin10dp"
+            android:paddingRight="@dimen/margin10dp"
+            android:paddingBottom="@dimen/margin10dp"
             android:textColorHint="@color/lightgrey"
             android:importantForAutofill="no" />
 
         <ImageView
-            android:layout_width="@dimen/marign20dp"
-            android:layout_height="@dimen/marign20dp"
+            android:layout_width="@dimen/margin20dp"
+            android:layout_height="@dimen/margin20dp"
             android:layout_gravity="center"
-            android:layout_marginEnd="@dimen/marign10dp"
+            android:layout_marginEnd="@dimen/margin10dp"
             android:focusable="false"
             android:src="@drawable/clear_field"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -96,10 +96,10 @@
         android:id="@+id/linear_aeps_customer_bank"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/marign20dp"
-        android:layout_marginTop="@dimen/marign10dp"
-        android:layout_marginEnd="@dimen/marign20dp"
-        android:layout_marginBottom="@dimen/marign20dp"
+        android:layout_marginStart="@dimen/margin20dp"
+        android:layout_marginTop="@dimen/margin10dp"
+        android:layout_marginEnd="@dimen/margin20dp"
+        android:layout_marginBottom="@dimen/margin20dp"
         android:background="@drawable/edittext_shadow"
         android:orientation="horizontal"
         app:layout_constraintTop_toBottomOf="@+id/linear_aeps_customer_name">
@@ -113,10 +113,10 @@
             android:hint="@string/selectbank"
             android:inputType="number"
             android:maxLength="10"
-            android:paddingLeft="@dimen/marign10dp"
-            android:paddingTop="@dimen/marign10dp"
-            android:paddingRight="@dimen/marign10dp"
-            android:paddingBottom="@dimen/marign10dp"
+            android:paddingLeft="@dimen/margin10dp"
+            android:paddingTop="@dimen/margin10dp"
+            android:paddingRight="@dimen/margin10dp"
+            android:paddingBottom="@dimen/margin10dp"
             android:textColorHint="@color/lightgrey"
             android:importantForAutofill="no" />
 
@@ -127,10 +127,10 @@
         android:id="@+id/linear_aeps_customer_addhar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/marign20dp"
-        android:layout_marginTop="@dimen/marign10dp"
-        android:layout_marginEnd="@dimen/marign20dp"
-        android:layout_marginBottom="@dimen/marign20dp"
+        android:layout_marginStart="@dimen/margin20dp"
+        android:layout_marginTop="@dimen/margin10dp"
+        android:layout_marginEnd="@dimen/margin20dp"
+        android:layout_marginBottom="@dimen/margin20dp"
         android:background="@drawable/edittext_shadow"
         android:orientation="horizontal"
         app:layout_constraintTop_toBottomOf="@+id/linear_aeps_customer_bank">
@@ -143,18 +143,18 @@
             android:hint="@string/aadharnumber"
             android:inputType="number"
             android:maxLength="10"
-            android:paddingLeft="@dimen/marign10dp"
-            android:paddingTop="@dimen/marign10dp"
-            android:paddingRight="@dimen/marign10dp"
-            android:paddingBottom="@dimen/marign10dp"
+            android:paddingLeft="@dimen/margin10dp"
+            android:paddingTop="@dimen/margin10dp"
+            android:paddingRight="@dimen/margin10dp"
+            android:paddingBottom="@dimen/margin10dp"
             android:textColorHint="@color/lightgrey"
             android:importantForAutofill="no" />
 
         <ImageView
-            android:layout_width="@dimen/marign20dp"
-            android:layout_height="@dimen/marign20dp"
+            android:layout_width="@dimen/margin20dp"
+            android:layout_height="@dimen/margin20dp"
             android:layout_gravity="center"
-            android:layout_marginEnd="@dimen/marign10dp"
+            android:layout_marginEnd="@dimen/margin10dp"
             android:focusable="false"
             android:src="@drawable/clear_field"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -168,8 +168,8 @@
         android:id="@+id/tv_termsncondtion"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/marign20dp"
-        android:layout_marginTop="@dimen/marign40dp"
+        android:layout_marginStart="@dimen/margin20dp"
+        android:layout_marginTop="@dimen/margin40dp"
         android:fontFamily="@font/lato_bold"
         android:text="@string/selectdevice"
         android:textColor="@color/black"
@@ -180,10 +180,10 @@
         android:id="@+id/aepstxt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/marign20dp"
+        android:layout_marginTop="@dimen/margin20dp"
         android:fontFamily="@font/lato_bold"
-        android:paddingStart="@dimen/marign20dp"
-        android:paddingEnd="@dimen/marign20dp"
+        android:paddingStart="@dimen/margin20dp"
+        android:paddingEnd="@dimen/margin20dp"
         android:text="@string/aepstxt"
         android:textColor="@color/black"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -193,15 +193,15 @@
         android:id="@+id/btn_next"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/marign20dp"
-        android:layout_marginTop="@dimen/marign20dp"
-        android:layout_marginEnd="@dimen/marign20dp"
-        android:layout_marginBottom="@dimen/marign20dp"
+        android:layout_marginStart="@dimen/margin20dp"
+        android:layout_marginTop="@dimen/margin20dp"
+        android:layout_marginEnd="@dimen/margin20dp"
+        android:layout_marginBottom="@dimen/margin20dp"
         android:background="@drawable/button_bg_green"
         android:fontFamily="@font/lato"
         android:text="@string/next"
         android:textColor="@color/white"
-        android:textSize="@dimen/marign18sp"
+        android:textSize="@dimen/margin18sp"
         app:layout_constraintTop_toBottomOf="@+id/aepstxt" />
 
 
