--- a/app/src/main/res/layout/fragment_change_password.xml
+++ b/app/src/main/res/layout/fragment_change_password.xml
@@ -20,9 +20,9 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_centerInParent="true"
-            android:layout_marginLeft="@dimen/marign20dp"
-            android:layout_marginRight="@dimen/marign20dp"
-            android:layout_marginBottom="@dimen/marign20dp"
+            android:layout_marginLeft="@dimen/margin20dp"
+            android:layout_marginRight="@dimen/margin20dp"
+            android:layout_marginBottom="@dimen/margin20dp"
             android:orientation="vertical">
 
             <ImageView
@@ -31,13 +31,13 @@
                 android:layout_width="110dp"
                 android:layout_height="110dp"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="@dimen/marign30dp"
+                android:layout_marginTop="@dimen/margin30dp"
                 android:contentDescription="@string/image"
                 android:src="@drawable/spidpay_logo" />
 
 
             <TextView
-                android:layout_marginTop="@dimen/marign30dp"
+                android:layout_marginTop="@dimen/margin30dp"
                 android:id="@+id/tv_loginemail"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -45,7 +45,7 @@
                 android:fontFamily="@font/lato_bold"
                 android:text="@string/changepassword"
                 android:textColor="@color/purple_200"
-                android:textSize="@dimen/marign25sp" />
+                android:textSize="@dimen/margin25sp" />
 
 
             <com.google.android.material.textfield.TextInputLayout
@@ -53,9 +53,9 @@
                 android:id="@+id/txtinput_login_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/marign20dp"
-                android:layout_marginTop="@dimen/marign20dp"
-                android:layout_marginEnd="@dimen/marign20dp"
+                android:layout_marginStart="@dimen/margin20dp"
+                android:layout_marginTop="@dimen/margin20dp"
+                android:layout_marginEnd="@dimen/margin20dp"
                 app:endIconMode="password_toggle"
                 app:hintEnabled="false"
                 app:layout_constraintLeft_toLeftOf="parent"
@@ -72,8 +72,8 @@
                     android:hint="@string/oldpassword"
                     android:inputType="textPassword"
                     android:maxLength="20"
-                    android:paddingStart="@dimen/marign15dp"
-                    android:paddingEnd="@dimen/marign10dp"
+                    android:paddingStart="@dimen/margin15dp"
+                    android:paddingEnd="@dimen/margin10dp"
                     android:text="@={changepasswordviewmodel.string_old_password}"
                     app:hintEnabled="false" />
 
@@ -84,9 +84,9 @@
                 android:id="@+id/new_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/marign20dp"
-                android:layout_marginTop="@dimen/marign15dp"
-                android:layout_marginEnd="@dimen/marign20dp"
+                android:layout_marginStart="@dimen/margin20dp"
+                android:layout_marginTop="@dimen/margin15dp"
+                android:layout_marginEnd="@dimen/margin20dp"
                 app:endIconMode="password_toggle"
                 app:hintEnabled="false"
                 app:layout_constraintTop_toBottomOf="@+id/linear_mobile_number"
@@ -101,8 +101,8 @@
                     android:hint="@string/newpassword"
                     android:inputType="textPassword"
                     android:maxLength="20"
-                    android:paddingStart="@dimen/marign15dp"
-                    android:paddingEnd="@dimen/marign10dp"
+                    android:paddingStart="@dimen/margin15dp"
+                    android:paddingEnd="@dimen/margin10dp"
                     android:text="@={changepasswordviewmodel.string_new_password}"
                     app:hintEnabled="false" />
 
@@ -112,9 +112,9 @@
                 android:id="@+id/confirm_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/marign20dp"
-                android:layout_marginTop="@dimen/marign15dp"
-                android:layout_marginEnd="@dimen/marign20dp"
+                android:layout_marginStart="@dimen/margin20dp"
+                android:layout_marginTop="@dimen/margin15dp"
+                android:layout_marginEnd="@dimen/margin20dp"
                 app:endIconMode="password_toggle"
                 app:hintEnabled="false"
                 app:layout_constraintLeft_toLeftOf="parent"
@@ -131,8 +131,8 @@
                     android:hint="@string/confirmpassword"
                     android:inputType="textPassword"
                     android:maxLength="20"
-                    android:paddingStart="@dimen/marign15dp"
-                    android:paddingEnd="@dimen/marign10dp"
+                    android:paddingStart="@dimen/margin15dp"
+                    android:paddingEnd="@dimen/margin10dp"
                     android:text="@={changepasswordviewmodel.string_confirm_password}"
                     app:hintEnabled="false" />
 
@@ -143,16 +143,16 @@
                 android:id="@+id/btn_login"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/marign20dp"
-                android:layout_marginTop="@dimen/marign30dp"
-                android:layout_marginEnd="@dimen/marign20dp"
+                android:layout_marginStart="@dimen/margin20dp"
+                android:layout_marginTop="@dimen/margin30dp"
+                android:layout_marginEnd="@dimen/margin20dp"
                 android:background="@drawable/button_bg_green"
                 android:fontFamily="@font/lato"
                 android:onClick="@{(v)->changepasswordviewmodel.validateChangePassField(v)}"
                 android:text="@string/submit"
                 android:textAllCaps="false"
                 android:textColor="@color/white"
-                android:textSize="@dimen/marign18sp" />
+                android:textSize="@dimen/margin18sp" />
 
         </LinearLayout>
 
