--- a/app/src/main/res/layout/fragment_k_y_c.xml
+++ b/app/src/main/res/layout/fragment_k_y_c.xml
@@ -28,12 +28,12 @@
             android:id="@+id/tv_contact_detail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/marign20dp"
-            android:layout_marginTop="@dimen/marign20dp"
+            android:layout_marginStart="@dimen/margin20dp"
+            android:layout_marginTop="@dimen/margin20dp"
             android:fontFamily="@font/lato_bold"
             android:text="@string/kycdetail"
             android:textColor="@color/dark_blue"
-            android:textSize="@dimen/marign18sp"
+            android:textSize="@dimen/margin18sp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -41,7 +41,7 @@
             android:id="@+id/img_edit_kyc"
             android:layout_width="24dp"
             android:layout_height="24dp"
-            android:layout_marginEnd="@dimen/marign20dp"
+            android:layout_marginEnd="@dimen/margin20dp"
             android:contentDescription="TODO"
             android:src="@drawable/ic_baseline_edit_24"
             app:layout_constraintEnd_toEndOf="parent"
@@ -51,8 +51,8 @@
             android:id="@+id/tv_user_pan_number"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/marign20dp"
-            android:layout_marginTop="@dimen/marign20dp"
+            android:layout_marginStart="@dimen/margin20dp"
+            android:layout_marginTop="@dimen/margin20dp"
             android:fontFamily="@font/lato_bold"
             android:text="@string/pannumber"
             android:textColor="@color/black"
@@ -63,8 +63,8 @@
             android:id="@+id/tv_userpannumber_value"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/marign20dp"
-            android:layout_marginTop="@dimen/marign20dp"
+            android:layout_marginStart="@dimen/margin20dp"
+            android:layout_marginTop="@dimen/margin20dp"
             android:fontFamily="@font/lato_bold"
             android:text="@={kycinfo.panNo}"
             android:textColor="@color/black"
@@ -76,8 +76,8 @@
             android:id="@+id/tv_user_aadhar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/marign20dp"
-            android:layout_marginTop="@dimen/marign5dp"
+            android:layout_marginStart="@dimen/margin20dp"
+            android:layout_marginTop="@dimen/margin5dp"
             android:fontFamily="@font/lato_bold"
             android:text="@string/aadharnumber"
             android:textColor="@color/black"
@@ -89,8 +89,8 @@
             android:id="@+id/tv_user_aadhar_detail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/marign20dp"
-            android:layout_marginTop="@dimen/marign5dp"
+            android:layout_marginStart="@dimen/margin20dp"
+            android:layout_marginTop="@dimen/margin5dp"
             android:fontFamily="@font/lato_bold"
             android:text="@={kycinfo.aadharNo}"
             android:textColor="@color/black"
@@ -102,8 +102,8 @@
             android:id="@+id/tv_usere_voter"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/marign20dp"
-            android:layout_marginTop="@dimen/marign5dp"
+            android:layout_marginStart="@dimen/margin20dp"
+            android:layout_marginTop="@dimen/margin5dp"
             android:fontFamily="@font/lato_bold"
             android:text="@string/voterid"
             android:textColor="@color/black"
@@ -115,8 +115,8 @@
             android:id="@+id/tv_userevoterid"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/marign20dp"
-            android:layout_marginTop="@dimen/marign5dp"
+            android:layout_marginStart="@dimen/margin20dp"
+            android:layout_marginTop="@dimen/margin5dp"
             android:fontFamily="@font/lato_bold"
             android:text="@={kycinfo.idNo}"
             android:textColor="@color/black"
@@ -128,12 +128,12 @@
             android:id="@+id/tv_company_deatils"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/marign20dp"
-            android:layout_marginTop="@dimen/marign20dp"
+            android:layout_marginStart="@dimen/margin20dp"
+            android:layout_marginTop="@dimen/margin20dp"
             android:fontFamily="@font/lato_bold"
             android:text="@string/companydeatil"
             android:textColor="@color/dark_blue"
-            android:textSize="@dimen/marign18sp"
+            android:textSize="@dimen/margin18sp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_userevoterid" />
 
@@ -141,7 +141,7 @@
             android:id="@+id/img_edit_company_info"
             android:layout_width="24dp"
             android:layout_height="24dp"
-            android:layout_marginEnd="@dimen/marign20dp"
+            android:layout_marginEnd="@dimen/margin20dp"
             android:contentDescription="TODO"
             android:src="@drawable/ic_baseline_edit_24"
             app:layout_constraintEnd_toEndOf="parent"
@@ -152,8 +152,8 @@
             android:id="@+id/tv_storname"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/marign20dp"
-            android:layout_marginTop="@dimen/marign5dp"
+            android:layout_marginStart="@dimen/margin20dp"
+            android:layout_marginTop="@dimen/margin5dp"
             android:fontFamily="@font/lato_bold"
             android:text="@string/storename"
             android:textColor="@color/black"
@@ -165,8 +165,8 @@
             android:id="@+id/tv_storname_value"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/marign20dp"
-            android:layout_marginTop="@dimen/marign5dp"
+            android:layout_marginStart="@dimen/margin20dp"
+            android:layout_marginTop="@dimen/margin5dp"
             android:fontFamily="@font/lato_bold"
             android:text="@={companyinfo.companyName}"
             android:textColor="@color/black"
@@ -177,8 +177,8 @@
             android:id="@+id/tv_storetype"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/marign20dp"
-            android:layout_marginTop="@dimen/marign5dp"
+            android:layout_marginStart="@dimen/margin20dp"
+            android:layout_marginTop="@dimen/margin5dp"
             android:fontFamily="@font/lato_bold"
             android:text="@string/companytype"
             android:textColor="@color/black"
@@ -189,8 +189,8 @@
             android:id="@+id/tv_storetype_value"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/marign20dp"
-            android:layout_marginTop="@dimen/marign5dp"
+            android:layout_marginStart="@dimen/margin20dp"
+            android:layout_marginTop="@dimen/margin5dp"
             android:fontFamily="@font/lato_bold"
             android:text="@={companyinfo.companyType.description}"
             android:textColor="@color/black"
@@ -202,8 +202,8 @@
             android:id="@+id/tv_adyogaadhar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/marign20dp"
-            android:layout_marginTop="@dimen/marign5dp"
+            android:layout_marginStart="@dimen/margin20dp"
+            android:layout_marginTop="@dimen/margin5dp"
             android:fontFamily="@font/lato_bold"
             android:text="@string/udyohaddhar"
             android:textColor="@color/black"
@@ -215,8 +215,8 @@
             android:id="@+id/tv_adyogaadhar_value"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/marign20dp"
-            android:layout_marginTop="@dimen/marign5dp"
+            android:layout_marginStart="@dimen/margin20dp"
+            android:layout_marginTop="@dimen/margin5dp"
             android:fontFamily="@font/lato_bold"
             android:text="@={companyinfo.udyogAadhar}"
             android:textColor="@color/black"
@@ -230,8 +230,8 @@
 
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/marign20dp"
-            android:layout_marginTop="@dimen/marign5dp"
+            android:layout_marginStart="@dimen/margin20dp"
+            android:layout_marginTop="@dimen/margin5dp"
             android:fontFamily="@font/lato_bold"
             android:text="@string/partnershipdeed"
             android:textColor="@color/black"
@@ -245,8 +245,8 @@
 
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/marign20dp"
-            android:layout_marginTop="@dimen/marign5dp"
+            android:layout_marginStart="@dimen/margin20dp"
+            android:layout_marginTop="@dimen/margin5dp"
             android:fontFamily="@font/lato_bold"
             android:text="@={companyinfo.partnershipDeed}"
             android:textColor="@color/black"
@@ -259,8 +259,8 @@
 
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/marign20dp"
-            android:layout_marginTop="@dimen/marign5dp"
+            android:layout_marginStart="@dimen/margin20dp"
+            android:layout_marginTop="@dimen/margin5dp"
             android:fontFamily="@font/lato_bold"
             android:text="@string/moa"
             android:textColor="@color/black"
@@ -273,8 +273,8 @@
 
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/marign20dp"
-            android:layout_marginTop="@dimen/marign5dp"
+            android:layout_marginStart="@dimen/margin20dp"
+            android:layout_marginTop="@dimen/margin5dp"
             android:fontFamily="@font/lato_bold"
             android:text="@={companyinfo.moa}"
             android:textColor="@color/black"
@@ -287,8 +287,8 @@
 
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/marign20dp"
-            android:layout_marginTop="@dimen/marign5dp"
+            android:layout_marginStart="@dimen/margin20dp"
+            android:layout_marginTop="@dimen/margin5dp"
             android:fontFamily="@font/lato_bold"
             android:text="@string/coi"
             android:textColor="@color/black"
@@ -301,8 +301,8 @@
 
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/marign20dp"
-            android:layout_marginTop="@dimen/marign5dp"
+            android:layout_marginStart="@dimen/margin20dp"
+            android:layout_marginTop="@dimen/margin5dp"
             android:fontFamily="@font/lato_bold"
             android:text="@={companyinfo.coi}"
             android:textColor="@color/black"
@@ -315,8 +315,8 @@
 
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/marign20dp"
-            android:layout_marginTop="@dimen/marign5dp"
+            android:layout_marginStart="@dimen/margin20dp"
+            android:layout_marginTop="@dimen/margin5dp"
             android:fontFamily="@font/lato_bold"
             android:text="@string/declaration"
             android:textColor="@color/black"
@@ -329,8 +329,8 @@
 
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/marign20dp"
-            android:layout_marginTop="@dimen/marign5dp"
+            android:layout_marginStart="@dimen/margin20dp"
+            android:layout_marginTop="@dimen/margin5dp"
             android:fontFamily="@font/lato_bold"
             android:text="@={companyinfo.declaration}"
             android:textColor="@color/black"
@@ -343,8 +343,8 @@
             android:id="@+id/tv_gst"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/marign20dp"
-            android:layout_marginTop="@dimen/marign5dp"
+            android:layout_marginStart="@dimen/margin20dp"
+            android:layout_marginTop="@dimen/margin5dp"
             android:fontFamily="@font/lato_bold"
             android:text="@string/gstinnumber"
             android:textColor="@color/black"
@@ -355,8 +355,8 @@
             android:id="@+id/tv_gst_value"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/marign20dp"
-            android:layout_marginTop="@dimen/marign5dp"
+            android:layout_marginStart="@dimen/margin20dp"
+            android:layout_marginTop="@dimen/margin5dp"
             android:fontFamily="@font/lato_bold"
             android:text="@={companyinfo.gstNO}"
             android:textColor="@color/black"
