--- a/app/src/main/res/layout/fragment_my_profile.xml
+++ b/app/src/main/res/layout/fragment_my_profile.xml
@@ -26,12 +26,12 @@
             android:id="@+id/tv_contact_detail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/marign20dp"
-            android:layout_marginTop="@dimen/marign20dp"
+            android:layout_marginLeft="@dimen/margin20dp"
+            android:layout_marginTop="@dimen/margin20dp"
             android:fontFamily="@font/lato_bold"
             android:text="@string/contactdetail"
             android:textColor="@color/dark_blue"
-            android:textSize="@dimen/marign18sp"
+            android:textSize="@dimen/margin18sp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -39,9 +39,9 @@
             android:id="@+id/tv_username"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/marign20dp"
+            android:layout_marginLeft="@dimen/margin20dp"
             android:inputType="text"
-            android:layout_marginTop="@dimen/marign20dp"
+            android:layout_marginTop="@dimen/margin20dp"
             android:fontFamily="@font/lato_bold"
             android:text="@string/username1"
             android:textColor="@color/black"
@@ -52,8 +52,8 @@
             android:id="@+id/tv_firstname_lastname"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/marign20dp"
-            android:layout_marginTop="@dimen/marign20dp"
+            android:layout_marginLeft="@dimen/margin20dp"
+            android:layout_marginTop="@dimen/margin20dp"
             android:fontFamily="@font/lato_bold"
             android:text="@{userprofile.firstName+` `+userprofile.lastName}"
             android:textColor="@color/black"
@@ -64,8 +64,8 @@
             android:id="@+id/tv_usertype"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/marign20dp"
-            android:layout_marginTop="@dimen/marign5dp"
+            android:layout_marginLeft="@dimen/margin20dp"
+            android:layout_marginTop="@dimen/margin5dp"
             android:fontFamily="@font/lato_bold"
             android:text="@string/usertype"
             android:textColor="@color/black"
@@ -76,8 +76,8 @@
             android:id="@+id/tv_usertype_value"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/marign20dp"
-            android:layout_marginTop="@dimen/marign5dp"
+            android:layout_marginLeft="@dimen/margin20dp"
+            android:layout_marginTop="@dimen/margin5dp"
             android:fontFamily="@font/lato_bold"
             android:text="@{userprofile.userType}"
             android:textColor="@color/black"
@@ -88,8 +88,8 @@
             android:id="@+id/tv_useremail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/marign20dp"
-            android:layout_marginTop="@dimen/marign5dp"
+            android:layout_marginLeft="@dimen/margin20dp"
+            android:layout_marginTop="@dimen/margin5dp"
             android:fontFamily="@font/lato_bold"
             android:text="@string/email1"
             android:textColor="@color/black"
@@ -100,8 +100,8 @@
             android:id="@+id/tv_useremail_value"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/marign20dp"
-            android:layout_marginTop="@dimen/marign5dp"
+            android:layout_marginLeft="@dimen/margin20dp"
+            android:layout_marginTop="@dimen/margin5dp"
             android:fontFamily="@font/lato_bold"
             android:text="@{userprofile.email}"
             android:textColor="@color/black"
@@ -112,8 +112,8 @@
             android:id="@+id/tv_usermobileno"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/marign20dp"
-            android:layout_marginTop="@dimen/marign5dp"
+            android:layout_marginLeft="@dimen/margin20dp"
+            android:layout_marginTop="@dimen/margin5dp"
             android:fontFamily="@font/lato_bold"
             android:text="@string/mobileno1"
             android:textColor="@color/black"
@@ -125,8 +125,8 @@
             android:id="@+id/tv_user_mobileno_value"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/marign20dp"
-            android:layout_marginTop="@dimen/marign5dp"
+            android:layout_marginLeft="@dimen/margin20dp"
+            android:layout_marginTop="@dimen/margin5dp"
             android:fontFamily="@font/lato_bold"
             android:text="@{userprofile.mobileNo}"
             android:textColor="@color/black"
@@ -137,8 +137,8 @@
             android:id="@+id/tv_useraccountstatus"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/marign20dp"
-            android:layout_marginTop="@dimen/marign5dp"
+            android:layout_marginLeft="@dimen/margin20dp"
+            android:layout_marginTop="@dimen/margin5dp"
             android:fontFamily="@font/lato_bold"
             android:text="@string/accountStatus"
             android:textColor="@color/black"
@@ -150,8 +150,8 @@
             android:id="@+id/tv_useraccountstatus_value"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/marign20dp"
-            android:layout_marginTop="@dimen/marign5dp"
+            android:layout_marginLeft="@dimen/margin20dp"
+            android:layout_marginTop="@dimen/margin5dp"
             android:fontFamily="@font/lato_bold"
             android:text="@{userprofile.accountStatus}"
             android:textColor="@color/black"
@@ -163,8 +163,8 @@
             android:id="@+id/tv_userdomaincode"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/marign20dp"
-            android:layout_marginTop="@dimen/marign5dp"
+            android:layout_marginLeft="@dimen/margin20dp"
+            android:layout_marginTop="@dimen/margin5dp"
             android:fontFamily="@font/lato_bold"
             android:text="@string/domaincode"
             android:textColor="@color/black"
@@ -176,8 +176,8 @@
             android:id="@+id/tv_userdomaincode_value"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/marign20dp"
-            android:layout_marginTop="@dimen/marign5dp"
+            android:layout_marginLeft="@dimen/margin20dp"
+            android:layout_marginTop="@dimen/margin5dp"
             android:fontFamily="@font/lato_bold"
             android:text="@{userprofile.domainCode}"
             android:textColor="@color/black"
@@ -190,8 +190,8 @@
             android:id="@+id/tv_usercontactno"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/marign20dp"
-            android:layout_marginTop="@dimen/marign5dp"
+            android:layout_marginLeft="@dimen/margin20dp"
+            android:layout_marginTop="@dimen/margin5dp"
             android:fontFamily="@font/lato_bold"
             android:text="Alternative con: 12345789"
             android:textColor="@color/black"
@@ -204,12 +204,12 @@
             android:id="@+id/tv_addresss"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/marign20dp"
-            android:layout_marginTop="@dimen/marign20dp"
+            android:layout_marginStart="@dimen/margin20dp"
+            android:layout_marginTop="@dimen/margin20dp"
             android:fontFamily="@font/lato_bold"
             android:text="@string/address"
             android:textColor="@color/dark_blue"
-            android:textSize="@dimen/marign18sp"
+            android:textSize="@dimen/margin18sp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_usercontactno" />
 
@@ -217,8 +217,8 @@
             android:id="@+id/img_edit_address"
             android:layout_width="24dp"
             android:layout_height="24dp"
-            android:layout_marginTop="@dimen/marign20dp"
-            android:layout_marginEnd="@dimen/marign20dp"
+            android:layout_marginTop="@dimen/margin20dp"
+            android:layout_marginEnd="@dimen/margin20dp"
             android:contentDescription="TODO"
             android:src="@drawable/ic_baseline_edit_24"
             app:layout_constraintEnd_toEndOf="parent"
@@ -229,8 +229,8 @@
             android:id="@+id/tv_useraddressline"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/marign20dp"
-            android:layout_marginTop="@dimen/marign5dp"
+            android:layout_marginLeft="@dimen/margin20dp"
+            android:layout_marginTop="@dimen/margin5dp"
             android:fontFamily="@font/lato_bold"
             android:text="@string/addressline"
             android:textColor="@color/black"
@@ -241,8 +241,8 @@
             android:id="@+id/tv_userflatno"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/marign20dp"
-            android:layout_marginTop="@dimen/marign5dp"
+            android:layout_marginLeft="@dimen/margin20dp"
+            android:layout_marginTop="@dimen/margin5dp"
             android:fontFamily="@font/lato_bold"
             android:text="@{(useraddress.addressline !=null ? useraddress.addressline : ``)}"
             android:textColor="@color/black"
@@ -253,8 +253,8 @@
             android:id="@+id/tv_userladnmark"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/marign20dp"
-            android:layout_marginTop="@dimen/marign5dp"
+            android:layout_marginLeft="@dimen/margin20dp"
+            android:layout_marginTop="@dimen/margin5dp"
             android:fontFamily="@font/lato_bold"
             android:text="@string/landmardk"
             android:textColor="@color/black"
@@ -266,8 +266,8 @@
             android:id="@+id/tv_userlocalarea"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/marign20dp"
-            android:layout_marginTop="@dimen/marign5dp"
+            android:layout_marginStart="@dimen/margin20dp"
+            android:layout_marginTop="@dimen/margin5dp"
             android:visibility="@{useraddress.landmark.equals(``) ? View.GONE : View.VISIBLE}"
             android:fontFamily="@font/lato_bold"
             android:text="@{useraddress.landmark !=null ? useraddress.landmark : ``}"
@@ -281,8 +281,8 @@
             android:id="@+id/tv_usercity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/marign20dp"
-            android:layout_marginTop="@dimen/marign5dp"
+            android:layout_marginLeft="@dimen/margin20dp"
+            android:layout_marginTop="@dimen/margin5dp"
             android:fontFamily="@font/lato_bold"
             android:text="@string/city1"
             android:textColor="@color/black"
@@ -293,8 +293,8 @@
             android:id="@+id/tv_usercityvalue"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/marign20dp"
-            android:layout_marginTop="@dimen/marign5dp"
+            android:layout_marginLeft="@dimen/margin20dp"
+            android:layout_marginTop="@dimen/margin5dp"
             android:fontFamily="@font/lato_bold"
             android:text="@{useraddress.city}"
             android:textColor="@color/black"
@@ -305,8 +305,8 @@
             android:id="@+id/tv_userdistrict"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/marign20dp"
-            android:layout_marginTop="@dimen/marign5dp"
+            android:layout_marginLeft="@dimen/margin20dp"
+            android:layout_marginTop="@dimen/margin5dp"
             android:fontFamily="@font/lato_bold"
             android:text="@string/district1"
             android:textColor="@color/black"
@@ -318,8 +318,8 @@
             android:id="@+id/tv_userdistrict_value"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/marign20dp"
-            android:layout_marginTop="@dimen/marign5dp"
+            android:layout_marginLeft="@dimen/margin20dp"
+            android:layout_marginTop="@dimen/margin5dp"
             android:fontFamily="@font/lato_bold"
             android:text="@{useraddress.district}"
             android:textColor="@color/black"
@@ -330,8 +330,8 @@
             android:id="@+id/tv_userstate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/marign20dp"
-            android:layout_marginTop="@dimen/marign5dp"
+            android:layout_marginLeft="@dimen/margin20dp"
+            android:layout_marginTop="@dimen/margin5dp"
             android:fontFamily="@font/lato_bold"
             android:text="@string/state1"
             android:textColor="@color/black"
@@ -343,8 +343,8 @@
             android:id="@+id/tv_userstate_value"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/marign20dp"
-            android:layout_marginTop="@dimen/marign5dp"
+            android:layout_marginLeft="@dimen/margin20dp"
+            android:layout_marginTop="@dimen/margin5dp"
             android:fontFamily="@font/lato_bold"
             android:text="@{useraddress.state}"
             android:textColor="@color/black"
@@ -356,8 +356,8 @@
             android:id="@+id/tv_userpincode"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/marign20dp"
-            android:layout_marginTop="@dimen/marign5dp"
+            android:layout_marginLeft="@dimen/margin20dp"
+            android:layout_marginTop="@dimen/margin5dp"
             android:fontFamily="@font/lato_bold"
             android:text="@string/pincode1"
             android:textColor="@color/black"
@@ -368,8 +368,8 @@
             android:id="@+id/tv_userpincode_value"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/marign20dp"
-            android:layout_marginTop="@dimen/marign5dp"
+            android:layout_marginLeft="@dimen/margin20dp"
+            android:layout_marginTop="@dimen/margin5dp"
             android:fontFamily="@font/lato_bold"
             android:text="@{useraddress.pinCode}"
             android:textColor="@color/black"
