--- a/app/src/main/res/layout/update_bank_detail.xml
+++ b/app/src/main/res/layout/update_bank_detail.xml
@@ -19,7 +19,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="@dimen/marign15dp">
+        android:padding="@dimen/margin15dp">
 
         <TextView
             android:id="@+id/tv_update_address"
@@ -28,7 +28,7 @@
             android:fontFamily="@font/lato_bold"
             android:text="@string/updatebankdeatil"
             android:textColor="@color/black"
-            android:textSize="@dimen/marign20sp"
+            android:textSize="@dimen/margin20sp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -47,15 +47,15 @@
             android:id="@+id/edt_user_acc_number"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/marign20dp"
+            android:layout_marginTop="@dimen/margin20dp"
             android:layout_weight="1"
             android:background="@drawable/edittext_shadow"
             android:hint="@string/accnumber"
             android:inputType="number"
-            android:paddingLeft="@dimen/marign10dp"
-            android:paddingTop="@dimen/marign10dp"
-            android:paddingRight="@dimen/marign10dp"
-            android:paddingBottom="@dimen/marign10dp"
+            android:paddingLeft="@dimen/margin10dp"
+            android:paddingTop="@dimen/margin10dp"
+            android:paddingRight="@dimen/margin10dp"
+            android:paddingBottom="@dimen/margin10dp"
             android:singleLine="true"
             android:text="@={bank.accountNo}"
             android:textColorHint="@color/lightgrey"
@@ -67,15 +67,15 @@
             android:id="@+id/edt_user_account_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/marign10dp"
+            android:layout_marginTop="@dimen/margin10dp"
             android:layout_weight="1"
             android:background="@drawable/edittext_shadow"
             android:hint="@string/accname"
             android:inputType="text"
-            android:paddingLeft="@dimen/marign10dp"
-            android:paddingTop="@dimen/marign10dp"
-            android:paddingRight="@dimen/marign10dp"
-            android:paddingBottom="@dimen/marign10dp"
+            android:paddingLeft="@dimen/margin10dp"
+            android:paddingTop="@dimen/margin10dp"
+            android:paddingRight="@dimen/margin10dp"
+            android:paddingBottom="@dimen/margin10dp"
             android:singleLine="true"
             android:text="@={bank.accountHolderName}"
             android:textColorHint="@color/lightgrey"
@@ -89,15 +89,15 @@
             android:id="@+id/edt_user_bank_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/marign10dp"
+            android:layout_marginTop="@dimen/margin10dp"
             android:layout_weight="1"
             android:background="@drawable/edittext_shadow"
             android:hint="@string/bankname1"
             android:inputType="text"
-            android:paddingLeft="@dimen/marign10dp"
-            android:paddingTop="@dimen/marign10dp"
-            android:paddingRight="@dimen/marign10dp"
-            android:paddingBottom="@dimen/marign10dp"
+            android:paddingLeft="@dimen/margin10dp"
+            android:paddingTop="@dimen/margin10dp"
+            android:paddingRight="@dimen/margin10dp"
+            android:paddingBottom="@dimen/margin10dp"
             android:singleLine="true"
             android:text="@={bank.companyType.description}"
             android:textColorHint="@color/lightgrey"
@@ -109,15 +109,15 @@
             android:id="@+id/edt_user_branch_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/marign10dp"
+            android:layout_marginTop="@dimen/margin10dp"
             android:layout_weight="1"
             android:background="@drawable/edittext_shadow"
             android:hint="@string/branchname1"
             android:inputType="text"
-            android:paddingLeft="@dimen/marign10dp"
-            android:paddingTop="@dimen/marign10dp"
-            android:paddingRight="@dimen/marign10dp"
-            android:paddingBottom="@dimen/marign10dp"
+            android:paddingLeft="@dimen/margin10dp"
+            android:paddingTop="@dimen/margin10dp"
+            android:paddingRight="@dimen/margin10dp"
+            android:paddingBottom="@dimen/margin10dp"
             android:singleLine="true"
             android:text="@={bank.branchName}"
             android:textColorHint="@color/lightgrey"
@@ -129,16 +129,16 @@
             android:id="@+id/edt_user_bank_ifsc"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/marign10dp"
+            android:layout_marginTop="@dimen/margin10dp"
             android:layout_weight="1"
             android:background="@drawable/edittext_shadow"
             android:hint="@string/ifsccode"
             android:maxLength="11"
             android:inputType="text"
-            android:paddingLeft="@dimen/marign10dp"
-            android:paddingTop="@dimen/marign10dp"
-            android:paddingRight="@dimen/marign10dp"
-            android:paddingBottom="@dimen/marign10dp"
+            android:paddingLeft="@dimen/margin10dp"
+            android:paddingTop="@dimen/margin10dp"
+            android:paddingRight="@dimen/margin10dp"
+            android:paddingBottom="@dimen/margin10dp"
             android:singleLine="true"
             android:text="@={bank.ifscCode}"
             android:textColorHint="@color/lightgrey"
@@ -151,16 +151,16 @@
             android:id="@+id/btn_update_kyc"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/marign10dp"
-            android:layout_marginTop="@dimen/marign20dp"
-            android:layout_marginEnd="@dimen/marign10dp"
-            android:layout_marginBottom="@dimen/marign20dp"
+            android:layout_marginStart="@dimen/margin10dp"
+            android:layout_marginTop="@dimen/margin20dp"
+            android:layout_marginEnd="@dimen/margin10dp"
+            android:layout_marginBottom="@dimen/margin20dp"
             android:background="@drawable/button_bg_green"
             android:fontFamily="@font/lato"
             android:onClick="@{(v)->myprofileviewmodel.validate_BankInfo(v,bank)}"
             android:text="@string/update"
             android:textColor="@color/white"
-            android:textSize="@dimen/marign18sp"
+            android:textSize="@dimen/margin18sp"
             app:layout_constraintTop_toBottomOf="@+id/edt_user_bank_ifsc" />
 
 
