--- a/app/src/main/res/layout/update_company_detail.xml
+++ b/app/src/main/res/layout/update_company_detail.xml
@@ -19,7 +19,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="@dimen/marign15dp">
+        android:padding="@dimen/margin15dp">
 
         <TextView
             android:id="@+id/tv_update_address"
@@ -28,7 +28,7 @@
             android:fontFamily="@font/lato_bold"
             android:text="@string/updatecompanydetail"
             android:textColor="@color/black"
-            android:textSize="@dimen/marign20sp"
+            android:textSize="@dimen/margin20sp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -46,15 +46,15 @@
             android:id="@+id/edt_edit_com_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/marign20dp"
+            android:layout_marginTop="@dimen/margin20dp"
             android:layout_weight="1"
             android:background="@drawable/edittext_shadow"
             android:hint="@string/companyname"
             android:inputType="text"
-            android:paddingLeft="@dimen/marign10dp"
-            android:paddingTop="@dimen/marign10dp"
-            android:paddingRight="@dimen/marign10dp"
-            android:paddingBottom="@dimen/marign10dp"
+            android:paddingLeft="@dimen/margin10dp"
+            android:paddingTop="@dimen/margin10dp"
+            android:paddingRight="@dimen/margin10dp"
+            android:paddingBottom="@dimen/margin10dp"
             android:singleLine="true"
             android:text="@={company.companyName}"
             android:textColorHint="@color/lightgrey"
@@ -69,15 +69,15 @@
             android:id="@+id/edt_edit_com_type"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/marign10dp"
+            android:layout_marginTop="@dimen/margin10dp"
             android:layout_weight="1"
             android:background="@drawable/edittext_shadow"
             android:hint="@string/companytype"
             android:inputType="text"
-            android:paddingLeft="@dimen/marign10dp"
-            android:paddingTop="@dimen/marign10dp"
-            android:paddingRight="@dimen/marign10dp"
-            android:paddingBottom="@dimen/marign10dp"
+            android:paddingLeft="@dimen/margin10dp"
+            android:paddingTop="@dimen/margin10dp"
+            android:paddingRight="@dimen/margin10dp"
+            android:paddingBottom="@dimen/margin10dp"
             android:singleLine="true"
             android:text="@={company.companyType.description}"
             android:textColorHint="@color/lightgrey"
@@ -91,15 +91,15 @@
             android:id="@+id/edt_edit_udyog"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/marign10dp"
+            android:layout_marginTop="@dimen/margin10dp"
             android:layout_weight="1"
             android:background="@drawable/edittext_shadow"
             android:hint="@string/udyohaddhar"
             android:inputType="text"
-            android:paddingLeft="@dimen/marign10dp"
-            android:paddingTop="@dimen/marign10dp"
-            android:paddingRight="@dimen/marign10dp"
-            android:paddingBottom="@dimen/marign10dp"
+            android:paddingLeft="@dimen/margin10dp"
+            android:paddingTop="@dimen/margin10dp"
+            android:paddingRight="@dimen/margin10dp"
+            android:paddingBottom="@dimen/margin10dp"
             android:singleLine="true"
             android:text="@={company.udyogAadhar}"
             android:textColorHint="@color/lightgrey"
@@ -114,15 +114,15 @@
             android:id="@+id/edt_edit_partnership"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/marign10dp"
+            android:layout_marginTop="@dimen/margin10dp"
             android:layout_weight="1"
             android:background="@drawable/edittext_shadow"
             android:hint="@string/partnershipdeed"
             android:inputType="text"
-            android:paddingLeft="@dimen/marign10dp"
-            android:paddingTop="@dimen/marign10dp"
-            android:paddingRight="@dimen/marign10dp"
-            android:paddingBottom="@dimen/marign10dp"
+            android:paddingLeft="@dimen/margin10dp"
+            android:paddingTop="@dimen/margin10dp"
+            android:paddingRight="@dimen/margin10dp"
+            android:paddingBottom="@dimen/margin10dp"
             android:singleLine="true"
             android:text="@={company.partnershipDeed}"
             android:textColorHint="@color/lightgrey"
@@ -138,15 +138,15 @@
             android:id="@+id/edt_edit_moa"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/marign10dp"
+            android:layout_marginTop="@dimen/margin10dp"
             android:layout_weight="1"
             android:background="@drawable/edittext_shadow"
             android:hint="@string/moa"
             android:inputType="text"
-            android:paddingLeft="@dimen/marign10dp"
-            android:paddingTop="@dimen/marign10dp"
-            android:paddingRight="@dimen/marign10dp"
-            android:paddingBottom="@dimen/marign10dp"
+            android:paddingLeft="@dimen/margin10dp"
+            android:paddingTop="@dimen/margin10dp"
+            android:paddingRight="@dimen/margin10dp"
+            android:paddingBottom="@dimen/margin10dp"
             android:singleLine="true"
             android:text="@={company.moa}"
             android:textColorHint="@color/lightgrey"
@@ -161,15 +161,15 @@
             android:id="@+id/edt_edit_coi"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/marign10dp"
+            android:layout_marginTop="@dimen/margin10dp"
             android:layout_weight="1"
             android:background="@drawable/edittext_shadow"
             android:hint="@string/coi"
             android:inputType="text"
-            android:paddingLeft="@dimen/marign10dp"
-            android:paddingTop="@dimen/marign10dp"
-            android:paddingRight="@dimen/marign10dp"
-            android:paddingBottom="@dimen/marign10dp"
+            android:paddingLeft="@dimen/margin10dp"
+            android:paddingTop="@dimen/margin10dp"
+            android:paddingRight="@dimen/margin10dp"
+            android:paddingBottom="@dimen/margin10dp"
             android:singleLine="true"
             android:text="@={company.coi}"
             android:textColorHint="@color/lightgrey"
@@ -183,15 +183,15 @@
             android:id="@+id/edt_edit_declration"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/marign10dp"
+            android:layout_marginTop="@dimen/margin10dp"
             android:layout_weight="1"
             android:background="@drawable/edittext_shadow"
             android:hint="@string/declaration"
             android:inputType="text"
-            android:paddingLeft="@dimen/marign10dp"
-            android:paddingTop="@dimen/marign10dp"
-            android:paddingRight="@dimen/marign10dp"
-            android:paddingBottom="@dimen/marign10dp"
+            android:paddingLeft="@dimen/margin10dp"
+            android:paddingTop="@dimen/margin10dp"
+            android:paddingRight="@dimen/margin10dp"
+            android:paddingBottom="@dimen/margin10dp"
             android:singleLine="true"
             android:text="@={company.declaration}"
             android:textColorHint="@color/lightgrey"
@@ -205,15 +205,15 @@
             android:id="@+id/edt_edit_gstno"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/marign10dp"
+            android:layout_marginTop="@dimen/margin10dp"
             android:layout_weight="1"
             android:background="@drawable/edittext_shadow"
             android:hint="@string/gstinnumber"
             android:inputType="text"
-            android:paddingLeft="@dimen/marign10dp"
-            android:paddingTop="@dimen/marign10dp"
-            android:paddingRight="@dimen/marign10dp"
-            android:paddingBottom="@dimen/marign10dp"
+            android:paddingLeft="@dimen/margin10dp"
+            android:paddingTop="@dimen/margin10dp"
+            android:paddingRight="@dimen/margin10dp"
+            android:paddingBottom="@dimen/margin10dp"
             android:singleLine="true"
             android:text="@={company.gstNO}"
             android:textColorHint="@color/lightgrey"
@@ -226,16 +226,16 @@
             android:id="@+id/btn_update_kyc"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/marign10dp"
-            android:layout_marginTop="@dimen/marign20dp"
-            android:layout_marginEnd="@dimen/marign10dp"
-            android:layout_marginBottom="@dimen/marign20dp"
+            android:layout_marginStart="@dimen/margin10dp"
+            android:layout_marginTop="@dimen/margin20dp"
+            android:layout_marginEnd="@dimen/margin10dp"
+            android:layout_marginBottom="@dimen/margin20dp"
             android:background="@drawable/button_bg_green"
             android:fontFamily="@font/lato"
             android:onClick="@{(v)->myprofileviewmodel.validate_compnay(v,company)}"
             android:text="@string/update"
             android:textColor="@color/white"
-            android:textSize="@dimen/marign18sp"
+            android:textSize="@dimen/margin18sp"
             app:layout_constraintTop_toBottomOf="@+id/edt_edit_gstno" />
 
 
