--- a/app/src/main/res/drawable/circle_green.xml
+++ b/app/src/main/res/drawable/circle_green.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="oval"
     >
     <size
-        android:width="@dimen/marign30dp"
-        android:height="@dimen/marign30dp" />
+        android:width="@dimen/margin30dp"
+        android:height="@dimen/margin30dp" />
     <solid android:color="@color/green"/>
 
 </shape>
