--- a/app/src/main/res/drawable/login_mobilenumber_bg.xml
+++ b/app/src/main/res/drawable/login_mobilenumber_bg.xml
@@ -8,8 +8,8 @@
                 android:right="1dp"
                 android:top="1dp" />
             <corners
-                android:bottomRightRadius="@dimen/marign10dp"
-                android:topRightRadius="@dimen/marign10dp" />
+                android:bottomRightRadius="@dimen/margin10dp"
+                android:topRightRadius="@dimen/margin10dp" />
 
             <solid android:color="#05DCDCDC" />
 
@@ -24,8 +24,8 @@
 
 
             <corners
-                android:bottomRightRadius="@dimen/marign10dp"
-                android:topRightRadius="@dimen/marign10dp" />
+                android:bottomRightRadius="@dimen/margin10dp"
+                android:topRightRadius="@dimen/margin10dp" />
             <solid android:color="#05DCDCDC" />
 
 
@@ -39,8 +39,8 @@
                 android:top="1dp" />
 
             <corners
-                android:bottomRightRadius="@dimen/marign10dp"
-                android:topRightRadius="@dimen/marign10dp" />
+                android:bottomRightRadius="@dimen/margin10dp"
+                android:topRightRadius="@dimen/margin10dp" />
 
             <solid android:color="#05DCDCDC" />
 
@@ -52,8 +52,8 @@
         <shape>
             <solid android:color="@color/white" />
             <corners
-                android:bottomRightRadius="@dimen/marign10dp"
-                android:topRightRadius="@dimen/marign10dp" />
+                android:bottomRightRadius="@dimen/margin10dp"
+                android:topRightRadius="@dimen/margin10dp" />
             <stroke
                 android:width="1dp"
                 android:color="@color/border_color"/>
