--- a/app/src/main/res/drawable/logincountrycode_bg.xml
+++ b/app/src/main/res/drawable/logincountrycode_bg.xml
@@ -9,7 +9,7 @@
                 android:top="1dp" />
 
 
-            <corners android:radius="@dimen/marign10dp" />
+            <corners android:radius="@dimen/margin10dp" />
 
             <solid android:color="#05DCDCDC" />
 
@@ -24,7 +24,7 @@
                 android:top="1dp" />
 
 
-            <corners android:radius="@dimen/marign10dp" />
+            <corners android:radius="@dimen/margin10dp" />
 
             <solid android:color="#05DCDCDC" />
 
@@ -38,7 +38,7 @@
                 android:left="1dp"
                 android:top="1dp" />
 
-            <corners android:radius="@dimen/marign10dp" />
+            <corners android:radius="@dimen/margin10dp" />
 
             <solid android:color="#05DCDCDC" />
 
@@ -52,8 +52,8 @@
             <solid
                 android:color="@color/white"/>
             <corners
-                android:bottomLeftRadius="@dimen/marign10dp"
-                android:topLeftRadius="@dimen/marign10dp"
+                android:bottomLeftRadius="@dimen/margin10dp"
+                android:topLeftRadius="@dimen/margin10dp"
                 />
             <stroke
                 android:width="1dp"
