--- a/app/src/main/res/drawable/rectangle_bg_white.xml
+++ b/app/src/main/res/drawable/rectangle_bg_white.xml
@@ -7,13 +7,13 @@
 
         android:color="@color/white"/>
     <corners
-        android:radius="@dimen/marign15dp"
+        android:radius="@dimen/margin15dp"
         />
     <stroke
         android:width="2dp"
         android:color="@color/white" />
 
     <size
-        android:height="@dimen/marign20dp"
-        android:width="@dimen/marign20dp" />
+        android:height="@dimen/margin20dp"
+        android:width="@dimen/margin20dp" />
 </shape>
