--- a/app/src/main/res/drawable/transfer_money_bg.xml
+++ b/app/src/main/res/drawable/transfer_money_bg.xml
@@ -7,7 +7,7 @@
         ></solid>
 
     <corners
-        android:radius="@dimen/marign15dp"
+        android:radius="@dimen/margin15dp"
         />
     <stroke
         android:width="2dp"
