--- a/app/src/main/res/layout/activity_host.xml
+++ b/app/src/main/res/layout/activity_host.xml
@@ -23,15 +23,15 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/dialogwith_whiteborder"
-                android:paddingTop="@dimen/marign10dp"
-                android:paddingBottom="@dimen/marign10dp">
+                android:paddingTop="@dimen/margin10dp"
+                android:paddingBottom="@dimen/margin10dp">
 
                 <ImageView
                     android:layout_centerVertical="true"
                     android:id="@+id/img_opendrawer"
-                    android:layout_width="@dimen/marign30dp"
-                    android:layout_height="@dimen/marign25dp"
-                    android:layout_marginStart="@dimen/marign10dp"
+                    android:layout_width="@dimen/margin30dp"
+                    android:layout_height="@dimen/margin25dp"
+                    android:layout_marginStart="@dimen/margin10dp"
                     android:contentDescription="@string/image"
                     android:src="@drawable/nav_slider" />
 
@@ -39,30 +39,30 @@
                     android:visibility="gone"
                     android:layout_centerVertical="true"
                     android:id="@+id/img_backpress"
-                    android:layout_width="@dimen/marign30dp"
-                    android:layout_height="@dimen/marign30dp"
-                    android:layout_marginStart="@dimen/marign10dp"
+                    android:layout_width="@dimen/margin30dp"
+                    android:layout_height="@dimen/margin30dp"
+                    android:layout_marginStart="@dimen/margin10dp"
                     android:contentDescription="@string/image"
                     android:src="@drawable/ic_baseline_arrow_back_ios_24" />
 
                 <TextView
                     android:fontFamily="@font/lato_bold"
-                    android:layout_marginLeft="@dimen/marign10dp"
+                    android:layout_marginLeft="@dimen/margin10dp"
                     android:layout_centerVertical="true"
                     android:layout_toRightOf="@+id/img_backpress"
                     android:id="@+id/tv_page_title"
-                    android:textSize="@dimen/marign16sp"
+                    android:textSize="@dimen/margin16sp"
                     android:textColor="@color/page_heading_color"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
 
                 <ImageView
                     android:layout_centerVertical="true"
-                    android:layout_width="@dimen/marign30dp"
-                    android:layout_height="@dimen/marign30dp"
+                    android:layout_width="@dimen/margin30dp"
+                    android:layout_height="@dimen/margin30dp"
                     android:layout_alignParentEnd="true"
-                    android:layout_marginStart="@dimen/marign10dp"
-                    android:layout_marginEnd="@dimen/marign10dp"
+                    android:layout_marginStart="@dimen/margin10dp"
+                    android:layout_marginEnd="@dimen/margin10dp"
                     android:contentDescription="@string/image"
                     android:src="@drawable/user_blue" />
 
@@ -92,8 +92,8 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:background="@color/green"
-                    android:paddingTop="@dimen/marign5dp"
-                    android:paddingBottom="@dimen/marign5dp">
+                    android:paddingTop="@dimen/margin5dp"
+                    android:paddingBottom="@dimen/margin5dp">
 
                     <LinearLayout
                         android:id="@+id/linear_home"
@@ -105,15 +105,15 @@
 
                         <ImageView
                             android:contentDescription="@string/home"
-                            android:layout_width="@dimen/marign30dp"
-                            android:layout_height="@dimen/marign30dp"
+                            android:layout_width="@dimen/margin30dp"
+                            android:layout_height="@dimen/margin30dp"
                             android:layout_gravity="center"
                             android:src="@drawable/home" />
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="@dimen/marign3dp"
+                            android:layout_marginTop="@dimen/margin3dp"
                             android:fontFamily="@font/lato_bold"
                             android:text="@string/home"
                             android:textColor="@color/white">
@@ -131,8 +131,8 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:background="@color/botton_nav_inactive_color"
-                    android:paddingTop="@dimen/marign5dp"
-                    android:paddingBottom="@dimen/marign5dp">
+                    android:paddingTop="@dimen/margin5dp"
+                    android:paddingBottom="@dimen/margin5dp">
 
                     <LinearLayout
                         android:layout_width="wrap_content"
@@ -142,8 +142,8 @@
                         android:orientation="vertical">
 
                         <ImageView
-                            android:layout_width="@dimen/marign30dp"
-                            android:layout_height="@dimen/marign30dp"
+                            android:layout_width="@dimen/margin30dp"
+                            android:layout_height="@dimen/margin30dp"
                             android:layout_centerHorizontal="true"
                             android:layout_gravity="center"
                             android:src="@drawable/ic_commision"
@@ -152,7 +152,7 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="@dimen/marign3dp"
+                            android:layout_marginTop="@dimen/margin3dp"
                             android:fontFamily="@font/lato_bold"
                             android:text="@string/commission"
                             android:textColor="@color/white">
@@ -177,12 +177,12 @@
                         android:layout_centerHorizontal="true"
                         android:layout_centerVertical="true"
                         android:orientation="vertical"
-                        android:paddingTop="@dimen/marign5dp"
-                        android:paddingBottom="@dimen/marign5dp">
+                        android:paddingTop="@dimen/margin5dp"
+                        android:paddingBottom="@dimen/margin5dp">
 
                         <ImageView
-                            android:layout_width="@dimen/marign30dp"
-                            android:layout_height="@dimen/marign30dp"
+                            android:layout_width="@dimen/margin30dp"
+                            android:layout_height="@dimen/margin30dp"
                             android:layout_gravity="center"
                             android:src="@drawable/notificatioin"
                             android:contentDescription="TODO" />
@@ -190,7 +190,7 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="@dimen/marign3dp"
+                            android:layout_marginTop="@dimen/margin3dp"
                             android:fontFamily="@font/lato_bold"
                             android:text="@string/Notification"
                             android:textColor="@color/white">
@@ -206,8 +206,8 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:background="@color/botton_nav_inactive_color"
-                    android:paddingTop="@dimen/marign5dp"
-                    android:paddingBottom="@dimen/marign5dp">
+                    android:paddingTop="@dimen/margin5dp"
+                    android:paddingBottom="@dimen/margin5dp">
 
 
                     <LinearLayout
@@ -218,8 +218,8 @@
                         android:orientation="vertical">
 
                         <ImageView
-                            android:layout_width="@dimen/marign30dp"
-                            android:layout_height="@dimen/marign30dp"
+                            android:layout_width="@dimen/margin30dp"
+                            android:layout_height="@dimen/margin30dp"
                             android:layout_gravity="center"
                             android:src="@drawable/history"
                             android:contentDescription="TODO" />
@@ -227,7 +227,7 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="@dimen/marign3dp"
+                            android:layout_marginTop="@dimen/margin3dp"
                             android:fontFamily="@font/lato_bold"
                             android:text="@string/history"
                             android:textColor="@color/white">
