--- a/app/src/main/res/layout/activity_payment_failed.xml
+++ b/app/src/main/res/layout/activity_payment_failed.xml
@@ -26,14 +26,14 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingTop="@dimen/marign10dp"
-                android:paddingBottom="@dimen/marign10dp">
+                android:paddingTop="@dimen/margin10dp"
+                android:paddingBottom="@dimen/margin10dp">
 
                 <ImageView
                     android:id="@+id/img_backpress"
                     android:layout_width="24dp"
                     android:layout_height="24dp"
-                    android:layout_marginStart="@dimen/marign10dp"
+                    android:layout_marginStart="@dimen/margin10dp"
                     android:contentDescription="TODO"
                     android:src="@drawable/ic_baseline_arrow_back_ios_24"
                     app:layout_constraintLeft_toLeftOf="parent"
@@ -47,7 +47,7 @@
                     android:fontFamily="@font/lato_bold"
                     android:text="@string/addmoney"
                     android:textColor="@color/page_heading_color"
-                    android:textSize="@dimen/marign18sp"
+                    android:textSize="@dimen/margin18sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintLeft_toRightOf="@+id/img_backpress"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -62,7 +62,7 @@
             android:id="@+id/img_success"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/marign40dp"
+            android:layout_marginTop="@dimen/margin40dp"
             android:contentDescription="TODO"
             android:src="@drawable/ic_transaction_failed_icon"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -74,9 +74,9 @@
             android:id="@+id/constraint_success_cashdeposite_request_parent"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/marign10dp"
-            android:layout_marginTop="@dimen/marign40dp"
-            android:layout_marginEnd="@dimen/marign10dp"
+            android:layout_marginStart="@dimen/margin10dp"
+            android:layout_marginTop="@dimen/margin40dp"
+            android:layout_marginEnd="@dimen/margin10dp"
             android:background="@drawable/all_transaction_bg"
             app:layout_constraintTop_toBottomOf="@+id/img_success">
 
@@ -84,7 +84,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:padding="@dimen/marign20dp"
+                android:padding="@dimen/margin20dp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
 
@@ -106,7 +106,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_marginTop="@dimen/marign10dp"
+                    android:layout_marginTop="@dimen/margin10dp"
                     android:fontFamily="@font/lato_bold"
                     android:gravity="center"
                     android:text="@string/transactionfailed"
@@ -123,10 +123,10 @@
             android:id="@+id/btn_backtohome"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/marign20dp"
-            android:layout_marginTop="@dimen/marign40dp"
-            android:layout_marginEnd="@dimen/marign20dp"
-            android:layout_marginBottom="@dimen/marign20dp"
+            android:layout_marginStart="@dimen/margin20dp"
+            android:layout_marginTop="@dimen/margin40dp"
+            android:layout_marginEnd="@dimen/margin20dp"
+            android:layout_marginBottom="@dimen/margin20dp"
             android:background="@drawable/button_bg_green"
             android:text="@string/backtohome"
             android:textAllCaps="false"
