--- a/app/src/main/res/layout/activity_payment_successful.xml
+++ b/app/src/main/res/layout/activity_payment_successful.xml
@@ -26,14 +26,14 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingTop="@dimen/marign10dp"
-                android:paddingBottom="@dimen/marign10dp">
+                android:paddingTop="@dimen/margin10dp"
+                android:paddingBottom="@dimen/margin10dp">
 
                 <ImageView
                     android:id="@+id/img_backpress"
                     android:layout_width="24dp"
                     android:layout_height="24dp"
-                    android:layout_marginStart="@dimen/marign10dp"
+                    android:layout_marginStart="@dimen/margin10dp"
                     android:contentDescription="TODO"
                     android:src="@drawable/ic_baseline_arrow_back_ios_24"
                     app:layout_constraintLeft_toLeftOf="parent"
@@ -47,7 +47,7 @@
                     android:fontFamily="@font/lato_bold"
                     android:text="@string/addmoney"
                     android:textColor="@color/page_heading_color"
-                    android:textSize="@dimen/marign18sp"
+                    android:textSize="@dimen/margin18sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintLeft_toRightOf="@+id/img_backpress"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -63,7 +63,7 @@
             android:id="@+id/payment_successful"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/marign30dp"
+            android:layout_marginTop="@dimen/margin30dp"
             app:layout_constraintTop_toBottomOf="@+id/carview_header">
 
             <ImageView
@@ -79,11 +79,11 @@
                 android:id="@+id/tv_request_successful"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/marign20dp"
+                android:layout_marginTop="@dimen/margin20dp"
                 android:gravity="center"
                 android:text="@string/walletrequestsuccessful"
                 android:textColor="@color/green"
-                android:textSize="@dimen/marign20sp"
+                android:textSize="@dimen/margin20sp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/img_success" />
@@ -92,7 +92,7 @@
                 android:id="@+id/tv_date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/marign20dp"
+                android:layout_marginTop="@dimen/margin20dp"
                 android:textColor="@color/darkgrey"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
@@ -105,24 +105,24 @@
             android:id="@+id/constraint_layout_success_1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/marign15dp"
-            android:layout_marginTop="@dimen/marign20dp"
-            android:layout_marginRight="@dimen/marign15dp"
+            android:layout_marginLeft="@dimen/margin15dp"
+            android:layout_marginTop="@dimen/margin20dp"
+            android:layout_marginRight="@dimen/margin15dp"
             android:background="@drawable/all_transaction_bg"
-            android:paddingTop="@dimen/marign20dp"
-            android:paddingBottom="@dimen/marign20dp"
+            android:paddingTop="@dimen/margin20dp"
+            android:paddingBottom="@dimen/margin20dp"
             app:layout_constraintTop_toBottomOf="@+id/payment_successful">
 
             <TextView
                 android:id="@+id/tv_reqestmoney1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/marign20dp"
-                android:layout_marginEnd="@dimen/marign20dp"
+                android:layout_marginStart="@dimen/margin20dp"
+                android:layout_marginEnd="@dimen/margin20dp"
                 android:fontFamily="@font/lato_bold"
                 android:text="@string/reqestmoney1"
                 android:textColor="@color/black"
-                android:textSize="@dimen/marign18sp"
+                android:textSize="@dimen/margin18sp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -131,11 +131,11 @@
                 android:id="@+id/tv_reqestmoney2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/marign20dp"
-                android:layout_marginEnd="@dimen/marign20dp"
+                android:layout_marginStart="@dimen/margin20dp"
+                android:layout_marginEnd="@dimen/margin20dp"
                 android:fontFamily="@font/lato_bold"
                 android:textColor="@color/green"
-                android:textSize="@dimen/marign18sp"
+                android:textSize="@dimen/margin18sp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tv_reqestmoney1" />
@@ -145,12 +145,12 @@
                 android:id="@+id/reqestmoney3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/marign20dp"
-                android:layout_marginEnd="@dimen/marign20dp"
+                android:layout_marginStart="@dimen/margin20dp"
+                android:layout_marginEnd="@dimen/margin20dp"
                 android:fontFamily="@font/lato_bold"
                 android:text="@string/reqestmoney2"
                 android:textColor="@color/black"
-                android:textSize="@dimen/marign18sp"
+                android:textSize="@dimen/margin18sp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tv_reqestmoney2" />
@@ -159,16 +159,16 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/marign20dp"
-                android:layout_marginTop="@dimen/marign20dp"
-                android:layout_marginEnd="@dimen/marign20dp"
+                android:layout_marginStart="@dimen/margin20dp"
+                android:layout_marginTop="@dimen/margin20dp"
+                android:layout_marginEnd="@dimen/margin20dp"
                 android:fontFamily="@font/lato_bold"
                 android:gravity="center"
-                android:paddingStart="@dimen/marign20dp"
-                android:paddingEnd="@dimen/marign20dp"
+                android:paddingStart="@dimen/margin20dp"
+                android:paddingEnd="@dimen/margin20dp"
                 android:text="@string/reqestmoney3"
                 android:textColor="@color/black"
-                android:textSize="@dimen/marign18sp"
+                android:textSize="@dimen/margin18sp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/reqestmoney3" />
@@ -180,24 +180,24 @@
             android:id="@+id/constraint_layout_transfer_money"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/marign15dp"
-            android:layout_marginTop="@dimen/marign20dp"
-            android:layout_marginRight="@dimen/marign15dp"
+            android:layout_marginLeft="@dimen/margin15dp"
+            android:layout_marginTop="@dimen/margin20dp"
+            android:layout_marginRight="@dimen/margin15dp"
             android:background="@drawable/all_transaction_bg"
-            android:paddingTop="@dimen/marign20dp"
-            android:paddingBottom="@dimen/marign20dp"
+            android:paddingTop="@dimen/margin20dp"
+            android:paddingBottom="@dimen/margin20dp"
             app:layout_constraintTop_toBottomOf="@+id/constraint_layout_success_1">
 
             <TextView
                 android:id="@+id/tv_reqesttransfermoney_1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/marign20dp"
-                android:layout_marginEnd="@dimen/marign20dp"
+                android:layout_marginStart="@dimen/margin20dp"
+                android:layout_marginEnd="@dimen/margin20dp"
                 android:fontFamily="@font/lato_bold"
                 android:text="@string/transfermoney1"
                 android:textColor="@color/black"
-                android:textSize="@dimen/marign18sp"
+                android:textSize="@dimen/margin18sp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -206,11 +206,11 @@
                 android:id="@+id/tv_reqesttransfermoney_2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/marign20dp"
-                android:layout_marginEnd="@dimen/marign20dp"
+                android:layout_marginStart="@dimen/margin20dp"
+                android:layout_marginEnd="@dimen/margin20dp"
                 android:fontFamily="@font/lato_bold"
                 android:textColor="@color/green"
-                android:textSize="@dimen/marign18sp"
+                android:textSize="@dimen/margin18sp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tv_reqesttransfermoney_1" />
@@ -221,12 +221,12 @@
                 android:id="@+id/tv_reqesttransfermoney_3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/marign20dp"
-                android:layout_marginEnd="@dimen/marign20dp"
+                android:layout_marginStart="@dimen/margin20dp"
+                android:layout_marginEnd="@dimen/margin20dp"
                 android:fontFamily="@font/lato_bold"
                 android:text="@string/transfermoney2"
                 android:textColor="@color/black"
-                android:textSize="@dimen/marign18sp"
+                android:textSize="@dimen/margin18sp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tv_reqesttransfermoney_2" />
@@ -239,16 +239,16 @@
             android:id="@+id/btn_backtohome"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/marign20dp"
-            android:layout_marginTop="@dimen/marign20dp"
-            android:layout_marginEnd="@dimen/marign20dp"
-            android:layout_marginBottom="@dimen/marign20dp"
+            android:layout_marginStart="@dimen/margin20dp"
+            android:layout_marginTop="@dimen/margin20dp"
+            android:layout_marginEnd="@dimen/margin20dp"
+            android:layout_marginBottom="@dimen/margin20dp"
             android:background="@drawable/button_bg_green"
             android:fontFamily="@font/lato"
             android:text="@string/backtohome"
             android:textAllCaps="false"
             android:textColor="@color/white"
-            android:textSize="@dimen/marign18sp"
+            android:textSize="@dimen/margin18sp"
             app:layout_constraintTop_toBottomOf="@+id/constraint_layout_transfer_money" />
 
 
