--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -24,7 +24,7 @@
                 android:layout_width="120dp"
                 android:layout_height="120dp"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="@dimen/marign30dp"
+                android:layout_marginTop="@dimen/margin30dp"
                 android:contentDescription="@string/image"
                 android:src="@drawable/spidpay_logo"
                 app:layout_constraintLeft_toLeftOf="parent"
@@ -36,14 +36,14 @@
                 android:id="@+id/tv_signup_txt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/marign20dp"
-                android:layout_marginTop="@dimen/marign40dp"
-                android:layout_marginEnd="@dimen/marign20dp"
-                android:layout_marginBottom="@dimen/marign20dp"
+                android:layout_marginStart="@dimen/margin20dp"
+                android:layout_marginTop="@dimen/margin40dp"
+                android:layout_marginEnd="@dimen/margin20dp"
+                android:layout_marginBottom="@dimen/margin20dp"
                 android:fontFamily="@font/lato_bold"
                 android:text="@string/signup"
                 android:textColor="@color/purple_200"
-                android:textSize="@dimen/marign20sp"
+                android:textSize="@dimen/margin20sp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/img_welcomebase" />
 
@@ -51,10 +51,10 @@
                 android:id="@+id/linear_intrested_for"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/marign20dp"
-                android:layout_marginTop="@dimen/marign15dp"
-                android:layout_marginEnd="@dimen/marign20dp"
-                android:layout_marginBottom="@dimen/marign20dp"
+                android:layout_marginStart="@dimen/margin20dp"
+                android:layout_marginTop="@dimen/margin15dp"
+                android:layout_marginEnd="@dimen/margin20dp"
+                android:layout_marginBottom="@dimen/margin20dp"
                 android:background="@drawable/edittext_shadow"
                 android:orientation="horizontal"
                 app:layout_constraintTop_toBottomOf="@+id/tv_signup_txt">
@@ -71,10 +71,10 @@
                     android:hint="@string/inrestedfor"
                     android:importantForAutofill="no"
                     android:inputType="text"
-                    android:paddingLeft="@dimen/marign10dp"
-                    android:paddingTop="@dimen/marign10dp"
-                    android:paddingRight="@dimen/marign10dp"
-                    android:paddingBottom="@dimen/marign10dp"
+                    android:paddingLeft="@dimen/margin10dp"
+                    android:paddingTop="@dimen/margin10dp"
+                    android:paddingRight="@dimen/margin10dp"
+                    android:paddingBottom="@dimen/margin10dp"
                     android:textColorHint="@color/lightgrey" />
 
 
@@ -85,10 +85,10 @@
                 android:id="@+id/linear_signup_firstname"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/marign20dp"
-                android:layout_marginTop="@dimen/marign15dp"
-                android:layout_marginEnd="@dimen/marign20dp"
-                android:layout_marginBottom="@dimen/marign20dp"
+                android:layout_marginStart="@dimen/margin20dp"
+                android:layout_marginTop="@dimen/margin15dp"
+                android:layout_marginEnd="@dimen/margin20dp"
+                android:layout_marginBottom="@dimen/margin20dp"
                 android:background="@drawable/edittext_shadow"
                 android:orientation="horizontal"
                 app:layout_constraintTop_toBottomOf="@+id/linear_intrested_for">
@@ -103,19 +103,19 @@
                     android:importantForAutofill="no"
                     android:inputType="text"
                     android:maxLength="50"
-                    android:paddingLeft="@dimen/marign10dp"
-                    android:paddingTop="@dimen/marign10dp"
-                    android:paddingRight="@dimen/marign10dp"
-                    android:paddingBottom="@dimen/marign10dp"
+                    android:paddingLeft="@dimen/margin10dp"
+                    android:paddingTop="@dimen/margin10dp"
+                    android:paddingRight="@dimen/margin10dp"
+                    android:paddingBottom="@dimen/margin10dp"
                     android:text="@{register_viewmodel.string_register_first_name}"
                     android:textColorHint="@color/lightgrey" />
 
                 <ImageView
                     android:id="@+id/img_clear_register_firstname"
-                    android:layout_width="@dimen/marign20dp"
-                    android:layout_height="@dimen/marign20dp"
+                    android:layout_width="@dimen/margin20dp"
+                    android:layout_height="@dimen/margin20dp"
                     android:layout_gravity="center"
-                    android:layout_marginEnd="@dimen/marign10dp"
+                    android:layout_marginEnd="@dimen/margin10dp"
                     android:contentDescription="TODO"
                     android:focusable="false"
                     android:onClick="@{()->register_viewmodel.clear_first_name()}"
@@ -132,10 +132,10 @@
                 android:id="@+id/linear_signup_lastname"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/marign20dp"
-                android:layout_marginTop="@dimen/marign15dp"
-                android:layout_marginEnd="@dimen/marign20dp"
-                android:layout_marginBottom="@dimen/marign20dp"
+                android:layout_marginStart="@dimen/margin20dp"
+                android:layout_marginTop="@dimen/margin15dp"
+                android:layout_marginEnd="@dimen/margin20dp"
+                android:layout_marginBottom="@dimen/margin20dp"
                 android:background="@drawable/edittext_shadow"
                 android:orientation="horizontal"
                 app:layout_constraintTop_toBottomOf="@+id/linear_signup_firstname">
@@ -150,19 +150,19 @@
                     android:importantForAutofill="no"
                     android:inputType="text"
                     android:maxLength="50"
-                    android:paddingLeft="@dimen/marign10dp"
-                    android:paddingTop="@dimen/marign10dp"
-                    android:paddingRight="@dimen/marign10dp"
-                    android:paddingBottom="@dimen/marign10dp"
+                    android:paddingLeft="@dimen/margin10dp"
+                    android:paddingTop="@dimen/margin10dp"
+                    android:paddingRight="@dimen/margin10dp"
+                    android:paddingBottom="@dimen/margin10dp"
                     android:text="@{register_viewmodel.string_register_last_name}"
                     android:textColorHint="@color/lightgrey" />
 
                 <ImageView
                     android:id="@+id/img_clear_register_lastname"
-                    android:layout_width="@dimen/marign20dp"
-                    android:layout_height="@dimen/marign20dp"
+                    android:layout_width="@dimen/margin20dp"
+                    android:layout_height="@dimen/margin20dp"
                     android:layout_gravity="center"
-                    android:layout_marginEnd="@dimen/marign10dp"
+                    android:layout_marginEnd="@dimen/margin10dp"
                     android:contentDescription="TODO"
                     android:focusable="false"
                     android:onClick="@{()->register_viewmodel.clear_last_name()}"
@@ -179,10 +179,10 @@
                 android:id="@+id/linear_signup_mobile_number"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/marign20dp"
-                android:layout_marginTop="@dimen/marign15dp"
-                android:layout_marginEnd="@dimen/marign20dp"
-                android:layout_marginBottom="@dimen/marign20dp"
+                android:layout_marginStart="@dimen/margin20dp"
+                android:layout_marginTop="@dimen/margin15dp"
+                android:layout_marginEnd="@dimen/margin20dp"
+                android:layout_marginBottom="@dimen/margin20dp"
                 android:background="@drawable/edittext_shadow"
                 android:orientation="horizontal"
                 app:layout_constraintTop_toBottomOf="@+id/linear_signup_lastname">
@@ -197,20 +197,20 @@
                     android:importantForAutofill="no"
                     android:inputType="number"
                     android:maxLength="10"
-                    android:paddingLeft="@dimen/marign10dp"
-                    android:paddingTop="@dimen/marign10dp"
-                    android:paddingRight="@dimen/marign10dp"
-                    android:paddingBottom="@dimen/marign10dp"
+                    android:paddingLeft="@dimen/margin10dp"
+                    android:paddingTop="@dimen/margin10dp"
+                    android:paddingRight="@dimen/margin10dp"
+                    android:paddingBottom="@dimen/margin10dp"
                     android:text="@={register_viewmodel.string_register_mobile_number}"
                     android:textColorHint="@color/lightgrey" />
 
 
                 <ImageView
                     android:id="@+id/img_cleare_register_mobilenumber"
-                    android:layout_width="@dimen/marign20dp"
-                    android:layout_height="@dimen/marign20dp"
+                    android:layout_width="@dimen/margin20dp"
+                    android:layout_height="@dimen/margin20dp"
                     android:layout_gravity="center"
-                    android:layout_marginEnd="@dimen/marign10dp"
+                    android:layout_marginEnd="@dimen/margin10dp"
                     android:contentDescription="TODO"
                     android:focusable="false"
                     android:onClick="@{()->register_viewmodel.clear_mobile_number()}"
@@ -225,10 +225,10 @@
                 android:id="@+id/linear_signup_email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/marign20dp"
-                android:layout_marginTop="@dimen/marign15dp"
-                android:layout_marginEnd="@dimen/marign20dp"
-                android:layout_marginBottom="@dimen/marign20dp"
+                android:layout_marginStart="@dimen/margin20dp"
+                android:layout_marginTop="@dimen/margin15dp"
+                android:layout_marginEnd="@dimen/margin20dp"
+                android:layout_marginBottom="@dimen/margin20dp"
                 android:background="@drawable/edittext_shadow"
                 android:orientation="horizontal"
                 app:layout_constraintTop_toBottomOf="@+id/linear_signup_mobile_number">
@@ -242,20 +242,20 @@
                     android:hint="@string/email"
                     android:importantForAutofill="no"
                     android:inputType="textEmailAddress"
-                    android:paddingLeft="@dimen/marign10dp"
-                    android:paddingTop="@dimen/marign10dp"
-                    android:paddingRight="@dimen/marign10dp"
-                    android:paddingBottom="@dimen/marign10dp"
+                    android:paddingLeft="@dimen/margin10dp"
+                    android:paddingTop="@dimen/margin10dp"
+                    android:paddingRight="@dimen/margin10dp"
+                    android:paddingBottom="@dimen/margin10dp"
                     android:text="@={register_viewmodel.string_register_email_Address}"
                     android:textColorHint="@color/lightgrey" />
 
 
                 <ImageView
                     android:id="@+id/img_cleare_register_email"
-                    android:layout_width="@dimen/marign20dp"
-                    android:layout_height="@dimen/marign20dp"
+                    android:layout_width="@dimen/margin20dp"
+                    android:layout_height="@dimen/margin20dp"
                     android:layout_gravity="center"
-                    android:layout_marginEnd="@dimen/marign10dp"
+                    android:layout_marginEnd="@dimen/margin10dp"
                     android:contentDescription="TODO"
                     android:focusable="false"
                     android:onClick="@{()->register_viewmodel.clear_email()}"
@@ -270,9 +270,9 @@
                 android:id="@+id/linear_signup_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/marign20dp"
-                android:layout_marginTop="@dimen/marign15dp"
-                android:layout_marginEnd="@dimen/marign20dp"
+                android:layout_marginStart="@dimen/margin20dp"
+                android:layout_marginTop="@dimen/margin15dp"
+                android:layout_marginEnd="@dimen/margin20dp"
                 app:endIconMode="password_toggle"
                 app:hintEnabled="false"
                 app:layout_constraintLeft_toLeftOf="parent"
@@ -289,8 +289,8 @@
                     android:hint="@string/password"
                     android:inputType="textPassword"
                     android:maxLength="20"
-                    android:paddingStart="@dimen/marign15dp"
-                    android:paddingEnd="@dimen/marign10dp"
+                    android:paddingStart="@dimen/margin15dp"
+                    android:paddingEnd="@dimen/margin10dp"
                     android:singleLine="true"
                     android:text="@={register_viewmodel.password}"
                     app:hintEnabled="false" />
@@ -301,9 +301,9 @@
                 android:id="@+id/linear_signup_confirm_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/marign20dp"
-                android:layout_marginTop="@dimen/marign15dp"
-                android:layout_marginEnd="@dimen/marign20dp"
+                android:layout_marginStart="@dimen/margin20dp"
+                android:layout_marginTop="@dimen/margin15dp"
+                android:layout_marginEnd="@dimen/margin20dp"
                 app:endIconMode="password_toggle"
                 app:hintEnabled="false"
                 app:layout_constraintLeft_toLeftOf="parent"
@@ -319,8 +319,8 @@
                     android:hint="@string/confirmpassword"
 
                     android:inputType="textPassword"
-                    android:paddingStart="@dimen/marign15dp"
-                    android:paddingEnd="@dimen/marign10dp"
+                    android:paddingStart="@dimen/margin15dp"
+                    android:paddingEnd="@dimen/margin10dp"
 
                     android:singleLine="true"
                     android:text="@={register_viewmodel.confirm_password}"
@@ -333,17 +333,17 @@
                 android:id="@+id/btn_register"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/marign20dp"
-                android:layout_marginTop="@dimen/marign20dp"
-                android:layout_marginEnd="@dimen/marign20dp"
-                android:layout_marginBottom="@dimen/marign20dp"
+                android:layout_marginStart="@dimen/margin20dp"
+                android:layout_marginTop="@dimen/margin20dp"
+                android:layout_marginEnd="@dimen/margin20dp"
+                android:layout_marginBottom="@dimen/margin20dp"
                 android:background="@drawable/button_bg_green"
                 android:fontFamily="@font/lato"
                 android:onClick="@{(v)->register_viewmodel.validate_signupView(v)}"
                 android:text="@string/register"
                 android:textAllCaps="false"
                 android:textColor="@color/white"
-                android:textSize="@dimen/marign18sp"
+                android:textSize="@dimen/margin18sp"
                 app:layout_constraintTop_toBottomOf="@+id/linear_signup_confirm_password" />
 
             <RelativeLayout
@@ -359,15 +359,15 @@
                     android:id="@+id/tv_login"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/marign20dp"
+                    android:layout_marginTop="@dimen/margin20dp"
                     android:fontFamily="@font/lato_bold"
                     android:gravity="center"
                     android:layout_gravity="center"
-                    android:paddingLeft="@dimen/marign15dp"
-                    android:paddingRight="@dimen/marign15dp"
+                    android:paddingLeft="@dimen/margin15dp"
+                    android:paddingRight="@dimen/margin15dp"
                     android:text="@string/signup_txt2"
                     android:textColor="@color/dark_blue"
-                    android:textSize="@dimen/marign18sp"
+                    android:textSize="@dimen/margin18sp"
                      />
 
             </RelativeLayout>
@@ -375,7 +375,7 @@
 
 
             <RelativeLayout
-                android:layout_marginTop="@dimen/marign20dp"
+                android:layout_marginTop="@dimen/margin20dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:layout_constraintLeft_toLeftOf="parent"
@@ -388,16 +388,16 @@
                     android:layout_height="wrap_content"
                     android:layout_centerHorizontal="true"
                     android:layout_gravity="center"
-                    android:layout_marginStart="@dimen/marign30dp"
-                    android:layout_marginEnd="@dimen/marign30dp"
+                    android:layout_marginStart="@dimen/margin30dp"
+                    android:layout_marginEnd="@dimen/margin30dp"
                     android:fontFamily="@font/lato"
                     android:gravity="center"
-                    android:paddingStart="@dimen/marign40dp"
-                    android:paddingEnd="@dimen/marign40dp"
-                    android:paddingBottom="@dimen/marign20dp"
+                    android:paddingStart="@dimen/margin40dp"
+                    android:paddingEnd="@dimen/margin40dp"
+                    android:paddingBottom="@dimen/margin20dp"
                     android:text="@string/dashboard_txt3"
                     android:textColor="@color/black"
-                    android:textSize="@dimen/marign18sp" />
+                    android:textSize="@dimen/margin18sp" />
 
             </RelativeLayout>
 
