--- a/app/src/main/res/layout/activity_register_sender.xml
+++ b/app/src/main/res/layout/activity_register_sender.xml
@@ -36,14 +36,14 @@
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:paddingTop="@dimen/marign10dp"
-                    android:paddingBottom="@dimen/marign10dp">
+                    android:paddingTop="@dimen/margin10dp"
+                    android:paddingBottom="@dimen/margin10dp">
 
                     <ImageView
                         android:id="@+id/img_backpress"
                         android:layout_width="24dp"
                         android:layout_height="24dp"
-                        android:layout_marginStart="@dimen/marign10dp"
+                        android:layout_marginStart="@dimen/margin10dp"
                         android:contentDescription="TODO"
                         android:src="@drawable/ic_baseline_arrow_back_ios_24"
                         app:layout_constraintLeft_toLeftOf="parent"
@@ -58,7 +58,7 @@
                         android:fontFamily="@font/lato_bold"
                         android:text="@string/registersender"
                         android:textColor="@color/page_heading_color"
-                        android:textSize="@dimen/marign18sp"
+                        android:textSize="@dimen/margin18sp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintLeft_toRightOf="@+id/img_backpress"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -73,9 +73,9 @@
                 android:id="@+id/linear_entermobilenumber"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/marign20dp"
-                android:layout_marginTop="@dimen/marign40dp"
-                android:layout_marginEnd="@dimen/marign20dp"
+                android:layout_marginStart="@dimen/margin20dp"
+                android:layout_marginTop="@dimen/margin40dp"
+                android:layout_marginEnd="@dimen/margin20dp"
                 android:background="@drawable/edittext_shadow"
                 android:orientation="horizontal"
                 app:layout_constraintTop_toBottomOf="@+id/carview_header">
@@ -88,10 +88,10 @@
                     android:background="@android:color/transparent"
                     android:hint="@string/entermobilenumber"
                     android:inputType="number"
-                    android:paddingLeft="@dimen/marign10dp"
-                    android:paddingTop="@dimen/marign15dp"
-                    android:paddingRight="@dimen/marign10dp"
-                    android:paddingBottom="@dimen/marign15dp"
+                    android:paddingLeft="@dimen/margin10dp"
+                    android:paddingTop="@dimen/margin15dp"
+                    android:paddingRight="@dimen/margin10dp"
+                    android:paddingBottom="@dimen/margin15dp"
 
                     android:textColorHint="@color/lightgrey" />
 
@@ -101,9 +101,9 @@
                 android:id="@+id/linear_enterfirstname"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/marign20dp"
-                android:layout_marginTop="@dimen/marign20dp"
-                android:layout_marginEnd="@dimen/marign20dp"
+                android:layout_marginStart="@dimen/margin20dp"
+                android:layout_marginTop="@dimen/margin20dp"
+                android:layout_marginEnd="@dimen/margin20dp"
                 android:background="@drawable/edittext_shadow"
                 android:orientation="horizontal"
                 app:layout_constraintTop_toBottomOf="@+id/linear_entermobilenumber">
@@ -116,10 +116,10 @@
                     android:background="@android:color/transparent"
                     android:hint="@string/firstname"
                     android:inputType="text"
-                    android:paddingLeft="@dimen/marign10dp"
-                    android:paddingTop="@dimen/marign15dp"
-                    android:paddingRight="@dimen/marign10dp"
-                    android:paddingBottom="@dimen/marign15dp"
+                    android:paddingLeft="@dimen/margin10dp"
+                    android:paddingTop="@dimen/margin15dp"
+                    android:paddingRight="@dimen/margin10dp"
+                    android:paddingBottom="@dimen/margin15dp"
 
                     android:textColorHint="@color/lightgrey" />
 
@@ -129,9 +129,9 @@
                 android:id="@+id/linear_lastname"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/marign20dp"
-                android:layout_marginTop="@dimen/marign20dp"
-                android:layout_marginEnd="@dimen/marign20dp"
+                android:layout_marginStart="@dimen/margin20dp"
+                android:layout_marginTop="@dimen/margin20dp"
+                android:layout_marginEnd="@dimen/margin20dp"
                 android:background="@drawable/edittext_shadow"
                 android:orientation="horizontal"
                 app:layout_constraintTop_toBottomOf="@+id/linear_enterfirstname">
@@ -144,10 +144,10 @@
                     android:background="@android:color/transparent"
                     android:hint="@string/lastname"
                     android:inputType="text"
-                    android:paddingLeft="@dimen/marign10dp"
-                    android:paddingTop="@dimen/marign15dp"
-                    android:paddingRight="@dimen/marign10dp"
-                    android:paddingBottom="@dimen/marign15dp"
+                    android:paddingLeft="@dimen/margin10dp"
+                    android:paddingTop="@dimen/margin15dp"
+                    android:paddingRight="@dimen/margin10dp"
+                    android:paddingBottom="@dimen/margin15dp"
 
                     android:textColorHint="@color/lightgrey" />
 
@@ -157,9 +157,9 @@
                 android:id="@+id/linear_enterdob"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/marign20dp"
-                android:layout_marginTop="@dimen/marign20dp"
-                android:layout_marginEnd="@dimen/marign20dp"
+                android:layout_marginStart="@dimen/margin20dp"
+                android:layout_marginTop="@dimen/margin20dp"
+                android:layout_marginEnd="@dimen/margin20dp"
                 android:background="@drawable/edittext_shadow"
                 android:orientation="horizontal"
                 app:layout_constraintTop_toBottomOf="@+id/linear_lastname">
@@ -172,10 +172,10 @@
                     android:background="@android:color/transparent"
                     android:hint="@string/enterdob"
                     android:inputType="number"
-                    android:paddingLeft="@dimen/marign10dp"
-                    android:paddingTop="@dimen/marign15dp"
-                    android:paddingRight="@dimen/marign10dp"
-                    android:paddingBottom="@dimen/marign15dp"
+                    android:paddingLeft="@dimen/margin10dp"
+                    android:paddingTop="@dimen/margin15dp"
+                    android:paddingRight="@dimen/margin10dp"
+                    android:paddingBottom="@dimen/margin15dp"
 
                     android:textColorHint="@color/lightgrey" />
 
@@ -185,9 +185,9 @@
                 android:id="@+id/linear_enteraddress"
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
-                android:layout_marginStart="@dimen/marign20dp"
-                android:layout_marginTop="@dimen/marign20dp"
-                android:layout_marginEnd="@dimen/marign20dp"
+                android:layout_marginStart="@dimen/margin20dp"
+                android:layout_marginTop="@dimen/margin20dp"
+                android:layout_marginEnd="@dimen/margin20dp"
                 android:background="@drawable/edittext_shadow"
                 android:orientation="horizontal"
                 app:layout_constraintTop_toBottomOf="@+id/linear_enterdob">
@@ -200,10 +200,10 @@
                     android:background="@android:color/transparent"
                     android:hint="@string/enteraddress"
                     android:inputType="text"
-                    android:paddingLeft="@dimen/marign10dp"
-                    android:paddingTop="@dimen/marign15dp"
-                    android:paddingRight="@dimen/marign10dp"
-                    android:paddingBottom="@dimen/marign15dp"
+                    android:paddingLeft="@dimen/margin10dp"
+                    android:paddingTop="@dimen/margin15dp"
+                    android:paddingRight="@dimen/margin10dp"
+                    android:paddingBottom="@dimen/margin15dp"
 
                     android:textColorHint="@color/lightgrey" />
 
@@ -213,9 +213,9 @@
                 android:id="@+id/linear_enterpincode"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/marign20dp"
-                android:layout_marginTop="@dimen/marign20dp"
-                android:layout_marginEnd="@dimen/marign20dp"
+                android:layout_marginStart="@dimen/margin20dp"
+                android:layout_marginTop="@dimen/margin20dp"
+                android:layout_marginEnd="@dimen/margin20dp"
                 android:background="@drawable/edittext_shadow"
                 android:orientation="horizontal"
                 app:layout_constraintTop_toBottomOf="@+id/linear_enteraddress">
@@ -228,10 +228,10 @@
                     android:background="@android:color/transparent"
                     android:hint="@string/enterpincode"
                     android:inputType="number"
-                    android:paddingLeft="@dimen/marign10dp"
-                    android:paddingTop="@dimen/marign15dp"
-                    android:paddingRight="@dimen/marign10dp"
-                    android:paddingBottom="@dimen/marign15dp"
+                    android:paddingLeft="@dimen/margin10dp"
+                    android:paddingTop="@dimen/margin15dp"
+                    android:paddingRight="@dimen/margin10dp"
+                    android:paddingBottom="@dimen/margin15dp"
 
                     android:textColorHint="@color/lightgrey" />
 
@@ -242,16 +242,16 @@
                 android:id="@+id/btn_register"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/marign20dp"
-                android:layout_marginTop="@dimen/marign20dp"
-                android:layout_marginEnd="@dimen/marign20dp"
-                android:layout_marginBottom="@dimen/marign20dp"
+                android:layout_marginStart="@dimen/margin20dp"
+                android:layout_marginTop="@dimen/margin20dp"
+                android:layout_marginEnd="@dimen/margin20dp"
+                android:layout_marginBottom="@dimen/margin20dp"
                 android:background="@drawable/button_bg_green"
                 android:fontFamily="@font/lato"
                 android:text="@string/submit"
                 android:textAllCaps="false"
                 android:textColor="@color/white"
-                android:textSize="@dimen/marign18sp"
+                android:textSize="@dimen/margin18sp"
                 app:layout_constraintTop_toBottomOf="@+id/linear_enterpincode" />
 
 
