--- a/app/src/main/res/layout/activity_webview.xml
+++ b/app/src/main/res/layout/activity_webview.xml
@@ -30,14 +30,14 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingTop="@dimen/marign10dp"
-                android:paddingBottom="@dimen/marign10dp">
+                android:paddingTop="@dimen/margin10dp"
+                android:paddingBottom="@dimen/margin10dp">
 
                 <ImageView
                     android:id="@+id/img_backpress"
                     android:layout_width="24dp"
                     android:layout_height="24dp"
-                    android:layout_marginStart="@dimen/marign10dp"
+                    android:layout_marginStart="@dimen/margin10dp"
                     android:src="@drawable/ic_baseline_arrow_back_ios_24"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
@@ -51,7 +51,7 @@
                     android:fontFamily="@font/lato_bold"
                     android:text="@string/addmoney"
                     android:textColor="@color/page_heading_color"
-                    android:textSize="@dimen/marign18sp"
+                    android:textSize="@dimen/margin18sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintLeft_toRightOf="@+id/img_backpress"
                     app:layout_constraintTop_toTopOf="parent" />
