--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -13,9 +13,9 @@
     <LinearLayout
         android:id="@+id/layoutDots"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/marign30dp"
+        android:layout_height="@dimen/margin30dp"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="@dimen/marign20dp"
+        android:layout_marginBottom="@dimen/margin20dp"
         android:gravity="center"
         android:orientation="horizontal">
 
