--- a/app/src/main/res/layout/fragment_a_e_p_s__dashboard_.xml
+++ b/app/src/main/res/layout/fragment_a_e_p_s__dashboard_.xml
@@ -10,8 +10,8 @@
         android:id="@+id/tv_select_device"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/marign20dp"
-        android:layout_marginTop="@dimen/marign40dp"
+        android:layout_marginStart="@dimen/margin20dp"
+        android:layout_marginTop="@dimen/margin40dp"
         android:fontFamily="@font/lato_bold"
         android:text="@string/selectdevice"
         android:textColor="@color/black"
@@ -22,7 +22,7 @@
         android:id="@+id/img_mantra"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/marign40dp"
+        android:layout_marginTop="@dimen/margin40dp"
 
         android:textAllCaps="false"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -35,8 +35,8 @@
         android:id="@+id/tv_mantra"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/marign20dp"
-        android:layout_marginTop="@dimen/marign10dp"
+        android:layout_marginStart="@dimen/margin20dp"
+        android:layout_marginTop="@dimen/margin10dp"
         android:fontFamily="@font/lato_bold"
         android:text="@string/mantra"
         android:textColor="@color/black"
@@ -49,7 +49,7 @@
         android:id="@+id/img_morpho"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/marign40dp"
+        android:layout_marginTop="@dimen/margin40dp"
 
         android:textAllCaps="false"
         app:layout_constraintLeft_toRightOf="@+id/guideline"
@@ -61,8 +61,8 @@
         android:id="@+id/tv_morpho"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/marign20dp"
-        android:layout_marginTop="@dimen/marign10dp"
+        android:layout_marginStart="@dimen/margin20dp"
+        android:layout_marginTop="@dimen/margin10dp"
         android:fontFamily="@font/lato_bold"
         android:text="@string/morpho"
         android:textColor="@color/black"
@@ -75,7 +75,7 @@
         android:id="@+id/img_startech"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/marign40dp"
+        android:layout_marginTop="@dimen/margin40dp"
 
         android:textAllCaps="false"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -87,8 +87,8 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/marign20dp"
-        android:layout_marginTop="@dimen/marign10dp"
+        android:layout_marginStart="@dimen/margin20dp"
+        android:layout_marginTop="@dimen/margin10dp"
         android:fontFamily="@font/lato_bold"
         android:text="@string/startech"
         android:textColor="@color/black"
@@ -100,7 +100,7 @@
         android:id="@+id/img_precision"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/marign40dp"
+        android:layout_marginTop="@dimen/margin40dp"
 
         android:textAllCaps="false"
         app:layout_constraintLeft_toRightOf="@+id/guideline"
@@ -111,8 +111,8 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/marign20dp"
-        android:layout_marginTop="@dimen/marign10dp"
+        android:layout_marginStart="@dimen/margin20dp"
+        android:layout_marginTop="@dimen/margin10dp"
         android:fontFamily="@font/lato_bold"
         android:text="@string/precision"
         android:textColor="@color/black"
@@ -125,16 +125,16 @@
         android:id="@+id/btn_next"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/marign20dp"
-        android:layout_marginTop="@dimen/marign40dp"
-        android:layout_marginEnd="@dimen/marign20dp"
-        android:layout_marginBottom="@dimen/marign20dp"
+        android:layout_marginStart="@dimen/margin20dp"
+        android:layout_marginTop="@dimen/margin40dp"
+        android:layout_marginEnd="@dimen/margin20dp"
+        android:layout_marginBottom="@dimen/margin20dp"
         android:background="@drawable/button_bg_green"
         android:fontFamily="@font/lato"
         android:text="@string/next"
         android:textAllCaps="false"
         android:textColor="@color/white"
-        android:textSize="@dimen/marign18sp"
+        android:textSize="@dimen/margin18sp"
         app:layout_constraintTop_toBottomOf="@+id/img_precision" />
 
 
