--- a/app/src/main/res/layout/fragment_a_e_p_s__transactions_.xml
+++ b/app/src/main/res/layout/fragment_a_e_p_s__transactions_.xml
@@ -10,8 +10,8 @@
         android:id="@+id/tv_transactiontype"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/marign20dp"
-        android:layout_marginTop="@dimen/marign40dp"
+        android:layout_marginStart="@dimen/margin20dp"
+        android:layout_marginTop="@dimen/margin40dp"
         android:fontFamily="@font/lato_bold"
         android:text="@string/selecttrasctiontype"
         android:textColor="@color/black"
@@ -23,8 +23,8 @@
         android:id="@+id/rg_trasaction_type"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/marign20dp"
-        android:layout_marginTop="@dimen/marign20dp"
+        android:layout_marginStart="@dimen/margin20dp"
+        android:layout_marginTop="@dimen/margin20dp"
         android:orientation="vertical"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_transactiontype">
@@ -51,15 +51,15 @@
         android:id="@+id/btn_next"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/marign20dp"
-        android:layout_marginTop="@dimen/marign20dp"
-        android:layout_marginEnd="@dimen/marign20dp"
-        android:layout_marginBottom="@dimen/marign20dp"
+        android:layout_marginStart="@dimen/margin20dp"
+        android:layout_marginTop="@dimen/margin20dp"
+        android:layout_marginEnd="@dimen/margin20dp"
+        android:layout_marginBottom="@dimen/margin20dp"
         android:background="@drawable/button_bg_green"
         android:fontFamily="@font/lato"
         android:text="@string/next"
         android:textColor="@color/white"
-        android:textSize="@dimen/marign18sp"
+        android:textSize="@dimen/margin18sp"
         app:layout_constraintTop_toBottomOf="@+id/rg_trasaction_type" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
