--- a/app/src/main/res/layout/fragment_add_money.xml
+++ b/app/src/main/res/layout/fragment_add_money.xml
@@ -43,14 +43,14 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingTop="@dimen/marign10dp"
-                android:paddingBottom="@dimen/marign10dp">
+                android:paddingTop="@dimen/margin10dp"
+                android:paddingBottom="@dimen/margin10dp">
 
                 <ImageView
                     android:id="@+id/img_backpress"
                     android:layout_width="24dp"
                     android:layout_height="24dp"
-                    android:layout_marginStart="@dimen/marign10dp"
+                    android:layout_marginStart="@dimen/margin10dp"
                     android:src="@drawable/ic_baseline_arrow_back_ios_24"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
@@ -64,7 +64,7 @@
                     android:fontFamily="@font/lato_bold"
                     android:text="@string/addmoney"
                     android:textColor="@color/page_heading_color"
-                    android:textSize="@dimen/marign18sp"
+                    android:textSize="@dimen/margin18sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintLeft_toRightOf="@+id/img_backpress"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -80,12 +80,12 @@
             android:id="@+id/tv_addmoney_preferedoption"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/marign20dp"
-            android:layout_marginTop="@dimen/marign40dp"
+            android:layout_marginStart="@dimen/margin20dp"
+            android:layout_marginTop="@dimen/margin40dp"
             android:fontFamily="@font/lato_bold"
             android:text="@string/prefoption"
             android:textColor="@color/black"
-            android:textSize="@dimen/marign20sp"
+            android:textSize="@dimen/margin20sp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/carview_header" />
 
@@ -95,12 +95,12 @@
             android:id="@+id/rb_online"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/marign20dp"
-            android:layout_marginTop="@dimen/marign20dp"
+            android:layout_marginStart="@dimen/margin20dp"
+            android:layout_marginTop="@dimen/margin20dp"
             android:checked="@{addmoneyviewmodel.online}"
             android:onClick="@{()->addmoneyviewmodel.onOnlineClick()}"
             android:textColor="@color/black"
-            android:textSize="@dimen/marign20sp"
+            android:textSize="@dimen/margin20sp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_addmoney_preferedoption" />
 
@@ -108,11 +108,11 @@
         <TextView
             android:onClick="@{()->addmoneyviewmodel.onOnlineClick()}"
             android:id="@+id/tv_online"
-            android:textSize="@dimen/marign20sp"
+            android:textSize="@dimen/margin20sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/marign25dp"
-            android:layout_marginStart="@dimen/marign5dp"
+            android:layout_marginTop="@dimen/margin25dp"
+            android:layout_marginStart="@dimen/margin5dp"
             android:fontFamily="@font/lato_bold"
             android:text="@string/online"
             android:textColor="@color/black"
@@ -125,7 +125,7 @@
             android:id="@+id/tv_addmoney_usingpaymentgetway"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/marign7dp"
+            android:layout_marginStart="@dimen/margin7dp"
             android:fontFamily="@font/lato_bold"
             android:text="@string/usingpaymentgetway"
             android:textColor="@color/add_money_hint_color"
@@ -138,23 +138,23 @@
             android:id="@+id/rb_cashdesposit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/marign20dp"
-            android:layout_marginTop="@dimen/marign25dp"
+            android:layout_marginStart="@dimen/margin20dp"
+            android:layout_marginTop="@dimen/margin25dp"
             android:checked="@{addmoneyviewmodel.cashdeposite}"
             android:onClick="@{()->addmoneyviewmodel.onDepositeCashClick()}"
             android:textColor="@color/black"
-            android:textSize="@dimen/marign20sp"
+            android:textSize="@dimen/margin20sp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_addmoney_usingpaymentgetway" />
 
         <TextView
             android:onClick="@{()->addmoneyviewmodel.onDepositeCashClick()}"
             android:id="@+id/tv_cashdeposite"
-            android:textSize="@dimen/marign20sp"
+            android:textSize="@dimen/margin20sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/marign30dp"
-            android:layout_marginStart="@dimen/marign5dp"
+            android:layout_marginTop="@dimen/margin30dp"
+            android:layout_marginStart="@dimen/margin5dp"
             android:fontFamily="@font/lato_bold"
             android:text="@string/cashdeposit"
             android:textColor="@color/black"
@@ -164,7 +164,7 @@
 
 
         <TextView
-            android:layout_marginStart="@dimen/marign7dp"
+            android:layout_marginStart="@dimen/margin7dp"
             app:layout_constraintLeft_toRightOf="@+id/rb_cashdesposit"
             app:layout_constraintTop_toBottomOf="@+id/tv_cashdeposite"
             android:id="@+id/tv_addmoney_requiredvalidation"
@@ -180,12 +180,12 @@
             android:id="@+id/rb_requestparent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/marign20dp"
-            android:layout_marginTop="@dimen/marign25dp"
+            android:layout_marginStart="@dimen/margin20dp"
+            android:layout_marginTop="@dimen/margin25dp"
             android:checked="@{addmoneyviewmodel.requestparent}"
             android:onClick="@{()->addmoneyviewmodel.onRequestParentClick()}"
             android:textColor="@color/black"
-            android:textSize="@dimen/marign20sp"
+            android:textSize="@dimen/margin20sp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_addmoney_requiredvalidation" />
 
@@ -194,11 +194,11 @@
             android:text="@string/requestparent"
             android:onClick="@{()->addmoneyviewmodel.onRequestParentClick()}"
             android:id="@+id/tv_request_parent"
-            android:textSize="@dimen/marign20sp"
+            android:textSize="@dimen/margin20sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/marign30dp"
-            android:layout_marginStart="@dimen/marign5dp"
+            android:layout_marginTop="@dimen/margin30dp"
+            android:layout_marginStart="@dimen/margin5dp"
             android:fontFamily="@font/lato_bold"
             android:textColor="@color/black"
             app:layout_constraintTop_toBottomOf="@+id/tv_addmoney_requiredvalidation"
@@ -206,7 +206,7 @@
             />
 
         <TextView
-            android:layout_marginStart="@dimen/marign7dp"
+            android:layout_marginStart="@dimen/margin7dp"
             android:id="@+id/tv_addmoney_requestparent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -221,17 +221,17 @@
             android:id="@+id/edt_request_parent"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/marign20dp"
-            android:layout_marginTop="@dimen/marign25dp"
-            android:layout_marginEnd="@dimen/marign20dp"
+            android:layout_marginStart="@dimen/margin20dp"
+            android:layout_marginTop="@dimen/margin25dp"
+            android:layout_marginEnd="@dimen/margin20dp"
             android:layout_weight="1"
             android:background="@drawable/edittext_shadow"
             android:hint="@string/enteramount"
             android:inputType="number"
-            android:paddingLeft="@dimen/marign10dp"
-            android:paddingTop="@dimen/marign15dp"
-            android:paddingRight="@dimen/marign10dp"
-            android:paddingBottom="@dimen/marign15dp"
+            android:paddingLeft="@dimen/margin10dp"
+            android:paddingTop="@dimen/margin15dp"
+            android:paddingRight="@dimen/margin10dp"
+            android:paddingBottom="@dimen/margin15dp"
             android:text="@={addmoneyviewmodel.online_money}"
             android:textColorHint="@color/lightgrey"
             android:visibility="@{addmoneyviewmodel.requestparent ? View.VISIBLE : View.GONE,default=gone}"
@@ -244,17 +244,17 @@
             android:id="@+id/edt_request_parent_notes"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/marign20dp"
-            android:layout_marginTop="@dimen/marign25dp"
-            android:layout_marginEnd="@dimen/marign20dp"
+            android:layout_marginStart="@dimen/margin20dp"
+            android:layout_marginTop="@dimen/margin25dp"
+            android:layout_marginEnd="@dimen/margin20dp"
             android:layout_weight="1"
             android:background="@drawable/edittext_shadow"
             android:hint="@string/notes"
             android:inputType="text"
-            android:paddingLeft="@dimen/marign10dp"
-            android:paddingTop="@dimen/marign15dp"
-            android:paddingRight="@dimen/marign10dp"
-            android:paddingBottom="@dimen/marign15dp"
+            android:paddingLeft="@dimen/margin10dp"
+            android:paddingTop="@dimen/margin15dp"
+            android:paddingRight="@dimen/margin10dp"
+            android:paddingBottom="@dimen/margin15dp"
             android:text="@={addmoneyviewmodel.online_notes}"
             android:textColorHint="@color/lightgrey"
             android:visibility="@{addmoneyviewmodel.requestparent ? View.VISIBLE : View.GONE,default=gone}"
@@ -268,9 +268,9 @@
             android:id="@+id/btn_chooseoptionformoney"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/marign25dp"
-            android:layout_marginTop="@dimen/marign25dp"
-            android:layout_marginEnd="@dimen/marign25dp"
+            android:layout_marginStart="@dimen/margin25dp"
+            android:layout_marginTop="@dimen/margin25dp"
+            android:layout_marginEnd="@dimen/margin25dp"
             android:background="@drawable/button_bg_green"
             android:fontFamily="@font/lato"
             android:onClick="@{(v)->addmoneyviewmodel.onButtonContinueClick(v,balance,walletid)}"
