--- a/app/src/main/res/layout/fragment_all_transaction.xml
+++ b/app/src/main/res/layout/fragment_all_transaction.xml
@@ -18,36 +18,36 @@
             android:id="@+id/tv_all_transaction_balance"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/marign20dp"
-            android:layout_marginTop="@dimen/marign20dp"
+            android:layout_marginStart="@dimen/margin20dp"
+            android:layout_marginTop="@dimen/margin20dp"
             android:fontFamily="@font/lato_bold"
             android:text="@string/available_balance"
             android:textColor="@color/black"
-            android:textSize="@dimen/marign20sp"
+            android:textSize="@dimen/margin20sp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:layout_marginTop="@dimen/marign20dp"
+            android:layout_marginTop="@dimen/margin20dp"
             android:id="@+id/tv_addmoney_preferedoption"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/marign20dp"
-            android:layout_marginEnd="@dimen/marign20dp"
+            android:layout_marginStart="@dimen/margin20dp"
+            android:layout_marginEnd="@dimen/margin20dp"
             android:fontFamily="@font/lato_bold"
             android:text="Rs 600000"
             android:textColor="@color/light_green"
-            android:textSize="@dimen/marign20sp"
+            android:textSize="@dimen/margin20sp"
             app:layout_constraintLeft_toRightOf="@+id/tv_all_transaction_balance"
             app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.recyclerview.widget.RecyclerView
-            android:paddingBottom="@dimen/marign130dp"
+            android:paddingBottom="@dimen/margin130dp"
             android:id="@+id/rv_all_transaction"
             app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginTop="@dimen/marign20dp"
+            android:layout_marginTop="@dimen/margin20dp"
             app:layout_constraintTop_toBottomOf="@+id/tv_all_transaction_balance"
-            android:layout_marginStart="@dimen/marign10dp"
+            android:layout_marginStart="@dimen/margin10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
