--- a/app/src/main/res/layout/fragment_bank_g_s_t.xml
+++ b/app/src/main/res/layout/fragment_bank_g_s_t.xml
@@ -20,12 +20,12 @@
             android:id="@+id/tv_bank_Deatil"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/marign20dp"
-            android:layout_marginTop="@dimen/marign20dp"
+            android:layout_marginStart="@dimen/margin20dp"
+            android:layout_marginTop="@dimen/margin20dp"
             android:fontFamily="@font/lato_bold"
             android:text="@string/bankdetail"
             android:textColor="@color/dark_blue"
-            android:textSize="@dimen/marign18sp"
+            android:textSize="@dimen/margin18sp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -33,7 +33,7 @@
             android:id="@+id/img_edit_company"
             android:layout_width="24dp"
             android:layout_height="24dp"
-            android:layout_marginEnd="@dimen/marign20dp"
+            android:layout_marginEnd="@dimen/margin20dp"
             android:src="@drawable/ic_baseline_edit_24"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/tv_bank_Deatil"
@@ -44,8 +44,8 @@
             android:id="@+id/tv_user_acc_number"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/marign20dp"
-            android:layout_marginTop="@dimen/marign20dp"
+            android:layout_marginStart="@dimen/margin20dp"
+            android:layout_marginTop="@dimen/margin20dp"
             android:fontFamily="@font/lato_bold"
             android:text="@string/accnumber"
             android:textColor="@color/black"
@@ -56,8 +56,8 @@
             android:id="@+id/tv_user_acc_number_value"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/marign20dp"
-            android:layout_marginTop="@dimen/marign20dp"
+            android:layout_marginStart="@dimen/margin20dp"
+            android:layout_marginTop="@dimen/margin20dp"
             android:fontFamily="@font/lato_bold"
             android:text="@{String.valueOf(bankinfo.accountNo)}"
             android:textColor="@color/black"
@@ -68,8 +68,8 @@
             android:id="@+id/tv_acc_holder_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/marign20dp"
-            android:layout_marginTop="@dimen/marign5dp"
+            android:layout_marginStart="@dimen/margin20dp"
+            android:layout_marginTop="@dimen/margin5dp"
             android:fontFamily="@font/lato_bold"
             android:text="@string/accname"
             android:textColor="@color/black"
@@ -80,8 +80,8 @@
             android:id="@+id/tv_acc_holder_name_value"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/marign20dp"
-            android:layout_marginTop="@dimen/marign5dp"
+            android:layout_marginStart="@dimen/margin20dp"
+            android:layout_marginTop="@dimen/margin5dp"
             android:fontFamily="@font/lato_bold"
             android:text="@{bankinfo.accountHolderName}"
             android:textColor="@color/black"
@@ -92,8 +92,8 @@
             android:id="@+id/tv_user_bank_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/marign20dp"
-            android:layout_marginTop="@dimen/marign5dp"
+            android:layout_marginStart="@dimen/margin20dp"
+            android:layout_marginTop="@dimen/margin5dp"
             android:fontFamily="@font/lato_bold"
             android:text="@string/bankname"
             android:textColor="@color/black"
@@ -104,8 +104,8 @@
             android:id="@+id/tv_user_bank_name_value"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/marign20dp"
-            android:layout_marginTop="@dimen/marign5dp"
+            android:layout_marginStart="@dimen/margin20dp"
+            android:layout_marginTop="@dimen/margin5dp"
             android:fontFamily="@font/lato_bold"
             android:text="@{bankinfo.companyType.description}"
             android:textColor="@color/black"
@@ -116,8 +116,8 @@
             android:id="@+id/tv_user_branch_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/marign20dp"
-            android:layout_marginTop="@dimen/marign5dp"
+            android:layout_marginStart="@dimen/margin20dp"
+            android:layout_marginTop="@dimen/margin5dp"
             android:fontFamily="@font/lato_bold"
             android:text="@string/branchname"
             android:textColor="@color/black"
@@ -128,8 +128,8 @@
             android:id="@+id/tv_user_branch_name_value"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/marign20dp"
-            android:layout_marginTop="@dimen/marign5dp"
+            android:layout_marginStart="@dimen/margin20dp"
+            android:layout_marginTop="@dimen/margin5dp"
             android:fontFamily="@font/lato_bold"
             android:text="@{bankinfo.companyType.description}"
             android:textColor="@color/black"
@@ -140,8 +140,8 @@
             android:id="@+id/tv_user_bank_ifsccode"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/marign20dp"
-            android:layout_marginTop="@dimen/marign5dp"
+            android:layout_marginStart="@dimen/margin20dp"
+            android:layout_marginTop="@dimen/margin5dp"
             android:fontFamily="@font/lato_bold"
             android:text="@string/ifsccode1"
             android:textColor="@color/black"
@@ -152,8 +152,8 @@
             android:id="@+id/tv_user_bank_name_ifsccode_value"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/marign20dp"
-            android:layout_marginTop="@dimen/marign5dp"
+            android:layout_marginStart="@dimen/margin20dp"
+            android:layout_marginTop="@dimen/margin5dp"
             android:fontFamily="@font/lato_bold"
             android:text="@{bankinfo.ifscCode}"
             android:textColor="@color/black"
