--- a/app/src/main/res/layout/interrestedfor_bottomsheet.xml
+++ b/app/src/main/res/layout/interrestedfor_bottomsheet.xml
@@ -7,7 +7,7 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:padding="@dimen/marign10dp"
+        android:padding="@dimen/margin10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
