--- a/app/src/main/res/layout/nav_header_host.xml
+++ b/app/src/main/res/layout/nav_header_host.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/marign120dp"
+    android:layout_height="@dimen/margin120dp"
     android:background="@color/green"
     android:gravity="bottom"
     android:orientation="vertical"
