--- a/app/src/main/res/layout/test_layout.xml
+++ b/app/src/main/res/layout/test_layout.xml
@@ -30,7 +30,6 @@
 
 
             <TextView
-                android:textSize="@dimen/margin16sp"
                 android:id="@+id/tv_all_tramsaction_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -41,7 +40,6 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:layout_marginTop="@dimen/margin5dp"
                 android:id="@+id/tv_all_transaction_id"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -97,11 +95,12 @@
                 app:layout_constraintTop_toTopOf="parent">
 
                 <ImageView
+                    android:layout_centerVertical="true"
                     android:id="@+id/img_transaction_type"
                     android:layout_width="24dp"
                     android:layout_height="24dp"
                     android:layout_marginEnd="@dimen/margin10dp"
-                    android:src="@{alltransaction.transactionType.equals(`CREDIT`) ? @drawable/ic_baseline_add_24 : @drawable/ic_baseline_remove_24}" />
+                    android:src="@drawable/ic_baseline_remove_24" />
 
 
                 <TextView
@@ -111,8 +110,8 @@
                     android:layout_marginTop="@dimen/margin3dp"
                     android:layout_toEndOf="@+id/img_transaction_type"
                     android:fontFamily="@font/lato_bold"
-                    android:text="@{`₹ ` + alltransaction.amount}"
-                    android:textColor="@{alltransaction.transactionType.equals(`CREDIT`) ? @color/credit_transaction_color : @color/debit_transaction_color}"
+                    android:text="₹ 100000"
+                    android:textColor="@color/debit_transaction_color"
                     android:textSize="@dimen/margin16sp" />
 
 
