--- a/app/src/main/res/layout/verfiysenderdialog.xml
+++ b/app/src/main/res/layout/verfiysenderdialog.xml
@@ -14,8 +14,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/dialogwith_whiteborder"
-        android:paddingTop="@dimen/marign20dp"
-        android:paddingBottom="@dimen/marign20dp">
+        android:paddingTop="@dimen/margin20dp"
+        android:paddingBottom="@dimen/margin20dp">
 
 
         <TextView
@@ -23,8 +23,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:paddingStart="@dimen/marign20dp"
-            android:paddingEnd="@dimen/marign20dp"
+            android:paddingStart="@dimen/margin20dp"
+            android:paddingEnd="@dimen/margin20dp"
             android:text="@string/verifysendermsg"
             android:textColor="@color/green"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -35,9 +35,9 @@
             android:id="@+id/txtinput_forgot_username"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/marign20dp"
-            android:layout_marginTop="@dimen/marign15dp"
-            android:layout_marginEnd="@dimen/marign20dp"
+            android:layout_marginStart="@dimen/margin20dp"
+            android:layout_marginTop="@dimen/margin15dp"
+            android:layout_marginEnd="@dimen/margin20dp"
             app:hintEnabled="false"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -50,10 +50,10 @@
                 android:background="@drawable/edittext_shadow"
                 android:hint="@string/otp"
                 android:inputType="text"
-                android:paddingStart="@dimen/marign15dp"
-                android:paddingTop="@dimen/marign15dp"
-                android:paddingEnd="@dimen/marign10dp"
-                android:paddingBottom="@dimen/marign15dp"
+                android:paddingStart="@dimen/margin15dp"
+                android:paddingTop="@dimen/margin15dp"
+                android:paddingEnd="@dimen/margin10dp"
+                android:paddingBottom="@dimen/margin15dp"
                 android:text="@={loginviewmodel.OTP}"
                 app:hintEnabled="false" />
 
@@ -64,16 +64,16 @@
             android:id="@+id/btn_continue"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/marign20dp"
-            android:layout_marginTop="@dimen/marign20dp"
-            android:layout_marginEnd="@dimen/marign20dp"
-            android:layout_marginBottom="@dimen/marign20dp"
+            android:layout_marginStart="@dimen/margin20dp"
+            android:layout_marginTop="@dimen/margin20dp"
+            android:layout_marginEnd="@dimen/margin20dp"
+            android:layout_marginBottom="@dimen/margin20dp"
             android:background="@drawable/button_bg_green"
             android:fontFamily="@font/lato"
             android:text="@string/verifyotp"
             android:textAllCaps="false"
             android:textColor="@color/white"
-            android:textSize="@dimen/marign18sp"
+            android:textSize="@dimen/margin18sp"
             app:layout_constraintTop_toBottomOf="@+id/txtinput_forgot_username" />
 
 
