--- a/app/src/main/res/layout/wallet_bottomsheet.xml
+++ b/app/src/main/res/layout/wallet_bottomsheet.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:paddingTop="@dimen/marign30dp"
-    android:paddingBottom="@dimen/marign30dp"
+    android:paddingTop="@dimen/margin30dp"
+    android:paddingBottom="@dimen/margin30dp"
     android:background="@color/wallet_bg"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <TextView
-        android:layout_marginLeft="@dimen/marign20dp"
+        android:layout_marginLeft="@dimen/margin20dp"
         android:fontFamily="@font/lato_bold"
         android:id="@+id/tv_wallet_addmoney"
         android:layout_width="wrap_content"
@@ -19,8 +19,8 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:layout_marginTop="@dimen/marign25dp"
-        android:layout_marginLeft="@dimen/marign20dp"
+        android:layout_marginTop="@dimen/margin25dp"
+        android:layout_marginLeft="@dimen/margin20dp"
         android:fontFamily="@font/lato_bold"
         android:id="@+id/tv_wallet_viewalltrasaction"
         android:layout_width="wrap_content"
@@ -32,8 +32,8 @@
 
 
     <TextView
-        android:layout_marginTop="@dimen/marign25dp"
-        android:layout_marginLeft="@dimen/marign20dp"
+        android:layout_marginTop="@dimen/margin25dp"
+        android:layout_marginLeft="@dimen/margin20dp"
         android:fontFamily="@font/lato_bold"
         android:id="@+id/tv_wallet_requestwallet_transfer"
         android:layout_width="wrap_content"
@@ -46,8 +46,8 @@
 
 
     <TextView
-        android:layout_marginTop="@dimen/marign25dp"
-        android:layout_marginLeft="@dimen/marign20dp"
+        android:layout_marginTop="@dimen/margin25dp"
+        android:layout_marginLeft="@dimen/margin20dp"
         android:fontFamily="@font/lato_bold"
         android:id="@+id/tv_wallet_setlowbalancealert"
         android:layout_width="wrap_content"
