--- a/app/src/main/res/layout/welcome_slide1.xml
+++ b/app/src/main/res/layout/welcome_slide1.xml
@@ -8,7 +8,7 @@
         android:layout_width="120dp"
         android:layout_height="120dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="@dimen/marign30dp"
+        android:layout_marginTop="@dimen/margin30dp"
         android:src="@drawable/spidpay_logo"
         android:contentDescription="TODO" />
 
@@ -19,12 +19,12 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/img_welcomebase"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="@dimen/marign30dp"
+        android:layout_marginTop="@dimen/margin30dp"
         android:fontFamily="@font/lato_bold"
         android:gravity="center"
         android:text="@string/welcomescreentext1"
         android:textColor="@color/dark_blue"
-        android:textSize="@dimen/marign35sp"
+        android:textSize="@dimen/margin35sp"
         />
 
     <TextView
@@ -33,12 +33,12 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/tv_welcomescreen_txt1"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="@dimen/marign3dp"
+        android:layout_marginTop="@dimen/margin3dp"
         android:fontFamily="@font/lato_bold"
         android:gravity="center"
         android:text="@string/welcomescreentext2"
         android:textColor="@color/light_green"
-        android:textSize="@dimen/marign35sp"
+        android:textSize="@dimen/margin35sp"
          />
 
 
@@ -48,14 +48,14 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/tv_welcomescreentext2"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="@dimen/marign50dp"
+        android:layout_marginTop="@dimen/margin50dp"
         android:fontFamily="@font/lato"
         android:gravity="center"
-        android:paddingLeft="@dimen/marign10dp"
-        android:paddingRight="@dimen/marign10dp"
+        android:paddingLeft="@dimen/margin10dp"
+        android:paddingRight="@dimen/margin10dp"
         android:text="@string/welcomescreentext3"
         android:textColor="@color/welcome_txt_color"
-        android:textSize="@dimen/marign20sp" />
+        android:textSize="@dimen/margin20sp" />
 
     <LinearLayout
         android:id="@+id/linear_welcomescreen1"
@@ -70,13 +70,13 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="@dimen/marign3dp"
+            android:layout_marginTop="@dimen/margin3dp"
             android:fontFamily="@font/lato"
             android:gravity="center"
-            android:paddingLeft="@dimen/marign10dp"
+            android:paddingLeft="@dimen/margin10dp"
             android:text="@string/welcomescreentext4"
             android:textColor="@color/welcome_txt_color"
-            android:textSize="@dimen/marign20sp" />
+            android:textSize="@dimen/margin20sp" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -84,13 +84,13 @@
             android:layout_centerInParent="true"
             android:layout_centerHorizontal="true"
             android:layout_marginLeft="5dp"
-            android:layout_marginTop="@dimen/marign3dp"
+            android:layout_marginTop="@dimen/margin3dp"
             android:fontFamily="@font/lato_bold"
             android:gravity="center"
-            android:paddingRight="@dimen/marign10dp"
+            android:paddingRight="@dimen/margin10dp"
             android:text="@string/welcomescreentext8"
             android:textColor="@color/dark_blue"
-            android:textSize="@dimen/marign20sp"
+            android:textSize="@dimen/margin20sp"
            />
 
 
@@ -100,10 +100,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/linear_welcomescreen1"
-        android:layout_marginLeft="@dimen/marign10dp"
-        android:layout_marginTop="@dimen/marign10dp"
-        android:layout_marginRight="@dimen/marign10dp"
-        android:layout_marginBottom="@dimen/marign30dp">
+        android:layout_marginLeft="@dimen/margin10dp"
+        android:layout_marginTop="@dimen/margin10dp"
+        android:layout_marginRight="@dimen/margin10dp"
+        android:layout_marginBottom="@dimen/margin30dp">
 
         <ImageView
             android:layout_width="500dp"
