--- a/app/src/main/res/layout/welcome_slide2.xml
+++ b/app/src/main/res/layout/welcome_slide2.xml
@@ -8,7 +8,7 @@
         android:layout_width="120dp"
         android:layout_height="120dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="@dimen/marign30dp"
+        android:layout_marginTop="@dimen/margin30dp"
         android:contentDescription="@string/image"
         android:src="@drawable/spidpay_logo"/>
 
@@ -19,12 +19,12 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/img_welcomebase"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="@dimen/marign20dp"
+        android:layout_marginTop="@dimen/margin20dp"
         android:fontFamily="@font/lato_bold"
         android:gravity="center"
         android:text="@string/welcomescreentext5"
         android:textColor="@color/dark_blue"
-        android:textSize="@dimen/marign35sp" />
+        android:textSize="@dimen/margin35sp" />
 
     <TextView
         android:id="@+id/tv_welcomescreentext2"
@@ -36,7 +36,7 @@
         android:gravity="center"
         android:text="@string/welcomescreentext6"
         android:textColor="@color/light_green"
-        android:textSize="@dimen/marign35sp" />
+        android:textSize="@dimen/margin35sp" />
 
 
     <TextView
@@ -45,14 +45,14 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/tv_welcomescreentext2"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="@dimen/marign40dp"
+        android:layout_marginTop="@dimen/margin40dp"
         android:fontFamily="@font/lato"
         android:gravity="center"
-        android:paddingLeft="@dimen/marign10dp"
-        android:paddingRight="@dimen/marign10dp"
+        android:paddingLeft="@dimen/margin10dp"
+        android:paddingRight="@dimen/margin10dp"
         android:text="@string/welcomescreentext7"
         android:textColor="@color/welcome_txt_color"
-        android:textSize="@dimen/marign20sp" />
+        android:textSize="@dimen/margin20sp" />
 
     <LinearLayout
         android:id="@+id/linear_welcomescreen1"
@@ -66,34 +66,34 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
 
-            android:layout_marginTop="@dimen/marign3dp"
+            android:layout_marginTop="@dimen/margin3dp"
             android:fontFamily="@font/lato"
             android:gravity="center"
-            android:paddingStart="@dimen/marign10dp"
+            android:paddingStart="@dimen/margin10dp"
             android:text="@string/welcomescreentext4"
             android:textColor="@color/welcome_txt_color"
-            android:textSize="@dimen/marign20sp" />
+            android:textSize="@dimen/margin20sp" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingStart="5dp"
-            android:layout_marginTop="@dimen/marign3dp"
+            android:layout_marginTop="@dimen/margin3dp"
             android:fontFamily="@font/lato"
             android:gravity="center"
-            android:paddingEnd="@dimen/marign10dp"
+            android:paddingEnd="@dimen/margin10dp"
             android:text="@string/welcomescreentext8"
             android:textColor="@color/dark_blue"
-            android:textSize="@dimen/marign20sp"
+            android:textSize="@dimen/margin20sp"
             android:textStyle="bold" />
 
 
     </LinearLayout>
     <RelativeLayout
-        android:layout_marginBottom="@dimen/marign30dp"
-        android:layout_marginTop="@dimen/marign10dp"
-        android:layout_marginRight="@dimen/marign10dp"
-        android:layout_marginLeft="@dimen/marign10dp"
+        android:layout_marginBottom="@dimen/margin30dp"
+        android:layout_marginTop="@dimen/margin10dp"
+        android:layout_marginRight="@dimen/margin10dp"
+        android:layout_marginLeft="@dimen/margin10dp"
         android:layout_below="@id/linear_welcomescreen1"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
