--- a/app/src/main/res/layout/welcome_slide3.xml
+++ b/app/src/main/res/layout/welcome_slide3.xml
@@ -9,7 +9,7 @@
         android:layout_width="120dp"
         android:layout_height="120dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="@dimen/marign30dp"
+        android:layout_marginTop="@dimen/margin30dp"
         android:src="@drawable/spidpay_logo"/>
 
 
@@ -19,12 +19,12 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/img_welcomebase"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="@dimen/marign20dp"
+        android:layout_marginTop="@dimen/margin20dp"
         android:fontFamily="@font/lato_bold"
         android:gravity="center"
         android:text="@string/welcomescreentext9"
         android:textColor="@color/dark_blue"
-        android:textSize="@dimen/marign35sp" />
+        android:textSize="@dimen/margin35sp" />
 
     <TextView
         android:id="@+id/tv_welcomescreentext2"
@@ -36,7 +36,7 @@
         android:gravity="center"
         android:text="@string/welcomescreentext10"
         android:textColor="@color/light_green"
-        android:textSize="@dimen/marign35sp" />
+        android:textSize="@dimen/margin35sp" />
 
     <TextView
         android:id="@+id/tv_welcomescreentext3"
@@ -48,7 +48,7 @@
         android:gravity="center"
         android:text="@string/welcomescreentext11"
         android:textColor="@color/dark_blue"
-        android:textSize="@dimen/marign35sp"
+        android:textSize="@dimen/margin35sp"
         android:textStyle="bold" />
 
 
@@ -57,16 +57,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/tv_welcomescreentext3"
-        android:layout_marginLeft="@dimen/marign20dp"
-        android:layout_marginTop="@dimen/marign25dp"
-        android:layout_marginRight="@dimen/marign20dp"
+        android:layout_marginLeft="@dimen/margin20dp"
+        android:layout_marginTop="@dimen/margin25dp"
+        android:layout_marginRight="@dimen/margin20dp"
         android:background="@drawable/welcome_round_corner"
         android:fontFamily="@font/lato_bold"
         android:gravity="center"
-        android:paddingLeft="@dimen/marign10dp"
-        android:paddingEnd="@dimen/marign10dp"
-        android:paddingTop="@dimen/marign10dp"
-        android:paddingBottom="@dimen/marign10dp"
+        android:paddingLeft="@dimen/margin10dp"
+        android:paddingEnd="@dimen/margin10dp"
+        android:paddingTop="@dimen/margin10dp"
+        android:paddingBottom="@dimen/margin10dp"
         android:text="@string/welcomescreentext12"
         android:textColor="@color/purple_200"
         android:textSize="22sp">
@@ -75,10 +75,10 @@
 
 
     <RelativeLayout
-        android:layout_marginBottom="@dimen/marign30dp"
-        android:layout_marginTop="@dimen/marign10dp"
-        android:layout_marginRight="@dimen/marign10dp"
-        android:layout_marginLeft="@dimen/marign10dp"
+        android:layout_marginBottom="@dimen/margin30dp"
+        android:layout_marginTop="@dimen/margin10dp"
+        android:layout_marginRight="@dimen/margin10dp"
+        android:layout_marginLeft="@dimen/margin10dp"
         android:layout_below="@id/tv_welcomescreentext4"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
